--- a/data/cards/31241087.yaml
+++ b/data/cards/31241087.yaml
@@ -2,11 +2,11 @@ konami_id: 18721
 password: 31241087
 name:
   en: Transcendosaurus Meteorus
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Transzendosaurier Meteorier
+  es: Meteorisaurio Trascendosaurio
+  fr: Transcendosaure Météoraure
+  it: Trascendosauro Meteorsauro
+  pt: Transcendossauro Meteossauro
   ja: <ruby>超<rt>ちょう</rt></ruby><ruby>越<rt>えつ</rt></ruby><ruby>竜<rt>りゅう</rt></ruby>メテオロス
   ja_romaji: Chōetsuryū Meteorosu
   ko:
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     Cannot be Normal Summoned/Set. Must be Special Summoned by card effect. During your opponent's turn (Quick Effect): You can destroy 2 other Dinosaur monsters in your hand and/or field, and if you do, Special Summon this card from your hand. If this card is Special Summoned: You can send 1 Dinosaur monster from your Deck to the GY. If this card is destroyed: You can shuffle 1 Normal Monster from your GY into the Deck, then you can Special Summon this card. You can only use each effect of "Transcendosaurus Meteorus" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Kann nicht als Normalbeschwörung beschworen/gesetzt werden. Muss durch einen Karteneffekt als Spezialbeschwörung beschworen werden. Während des Spielzugs deines Gegners (Schnelleffekt): Du kannst 2 andere Dinosaurier-Monster in deiner Hand und/oder auf deiner Spielfeldseite zerstören und falls du dies tust, beschwöre diese Karte als Spezialbeschwörung von deiner Hand. Falls diese Karte als Spezialbeschwörung beschworen wird: Du kannst 1 Dinosaurier-Monster von deinem Deck auf den Friedhof legen. Falls diese Karte zerstört wird: Du kannst 1 Normales Monster von deinem Friedhof ins Deck mischen, dann kannst du diese Karte als Spezialbeschwörung beschwören. Du kannst jeden Effekt von „Transzendosaurier Meteorier“ nur einmal pro Spielzug verwenden.
+  es: |-
+    No puede ser Invocado de Modo Normal/Colocado. Debe ser Invocado de Modo Especial por efecto de una carta. Durante el turno de tu adversario (Efecto Rápido): puedes destruir otros 2 monstruos Dinosaurio en tu mano y/o Campo y, si lo haces, Invoca esta carta de Modo Especial desde tu mano. Si esta carta es Invocada de Modo Especial: puedes mandar al Cementerio 1 monstruo Dinosaurio en tu Deck. Si esta carta es destruida: puedes barajar al Deck 1 Monstruo Normal en tu Cementerio, y después puedes Invocar esta carta de Modo Especial. Sólo puedes usar cada efecto de "Meteorisaurio Trascendosaurio" una vez por turno.
+  fr: |-
+    Ni Invocable Normalement ni Posable Normalement. Uniquement Invocable Spécialement par un effet de carte. Durant le tour de votre adversaire (Effet Rapide) : vous pouvez détruire 2 autres monstres Dinosaure dans votre main et/ou sur votre Terrain, et si vous le faites, Invoquez Spécialement cette carte depuis votre main. Si cette carte est Invoquée Spécialement : vous pouvez envoyer 1 monstre Dinosaure depuis votre Deck au Cimetière. Si cette carte est détruite : vous pouvez mélanger 1 Monstre Normal depuis votre Cimetière dans le Deck, puis vous pouvez Invoquer Spécialement cette carte. Vous ne pouvez utiliser chaque effet de "Transcendosaure Météoraure" qu'une fois par tour.
+  it: |-
+    Non può essere Evocato Normalmente/Posizionato. Deve essere Evocato Specialmente dall'effetto di una carta. Durante il turno del tuo avversario (Effetto Rapido): puoi distruggere 2 altri mostri Dinosauro nella tua mano e/o Terreno e, se lo fai, Evoca Specialmente questa carta dalla tua mano. Se questa carta viene Evocata Specialmente: puoi mandare 1 mostro Dinosauro dal tuo Deck al Cimitero. Se questa carta viene distrutta: puoi mischiare 1 Mostro Normale dal tuo Cimitero nel Deck, poi puoi Evocare Specialmente questa carta. Puoi utilizzare ogni effetto di "Trascendosauro Meteorsauro" una sola volta per turno.
+  pt: |-
+    Não pode ser Invocado por Invocação-Normal/Baixado. Deve ser Invocado por Invocação-Especial por um efeito de card. Durante o turno do seu oponente (Efeito Rápido): você pode destruir 2 outros monstros Dinossauro na sua mão e/ou no campo e, se isso acontecer, Invoque este card por Invocação-Especial da sua mão. Se este card for Invocado por Invocação-Especial: você pode enviar 1 monstro Dinossauro do seu Deck para o Cemitério. Se este card for destruído: você pode embaralhar no Deck 1 Monstro Normal do seu Cemitério e, depois, você pode Invocar este card por Invocação-Especial. Você só pode usar cada efeito de "Transcendossauro Meteossauro" uma vez por turno.
   ja: |-
     このカードは通常召喚できず、カードの効果でのみ特殊召喚できる。このカード名の①②③の効果はそれぞれ１ターンに１度しか使用できない。①：相手ターンに発動できる。このカード以外の自分の手札・フィールドの恐竜族モンスター２体を選んで破壊し、このカードを手札から特殊召喚する。②：このカードが特殊召喚に成功した場合に発動できる。デッキから恐竜族モンスター１体を墓地へ送る。③：このカードが破壊された場合に発動できる。自分の墓地から通常モンスター１体を選んでデッキに戻す。その後、このカードを特殊召喚できる。
   ko:
