--- a/data/cards/40551410.yaml
+++ b/data/cards/40551410.yaml
@@ -2,11 +2,11 @@ konami_id: 18749
 password: 40551410
 name:
   en: Recette de Personnel (Staff Recipe)
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Recette de Personnel (Personal-Rezept)
+  es: Recette de Personnel (Receta del Personal)
+  fr: Recette du Personnel
+  it: Recette de Personnel (Ricetta dello Staff)
+  pt: Recette de Personnel (Receita dos Funcionários)
   ja: <ruby>Ｒｅｃｅｔｔｅ ｄｅ Ｐｅｒｓｏｎｎｅｌ<rt>ルセット・ド・ペルソネル</rt></ruby>～<ruby>賄<rt>まかな</rt></ruby>いのレシピ～
   ja_romaji: Rusetto do Perusoneru ~ Makanai no Reshipi ~
   ko:
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     You can target 1 Ritual Monster you control; Special Summon 1 "Nouvelles Token" (Fiend/DARK/Level 1/ATK 50/DEF 50). This Token's Level becomes the same as that monster's. You can send this face-up card from your Spell & Trap Zone to the GY; Ritual Summon 1 "Nouvelles" Ritual Monster from your hand by Tributing monsters from your hand or field whose total Levels exactly equal the Level of that Ritual Monster. You can only use each effect of "Recette de Personnel (Staff Recipe)" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Du kannst 1 Ritualmonster wählen, das du kontrollierst; beschwöre 1 „Nouvelles-Spielmarke“ (Unterweltler/FINSTERNIS/Stufe 1/ATK 50/DEF 50) als Spezialbeschwörung. Die Stufe dieser Spielmarke wird dieselbe wie die jenes Monsters. Du kannst diese offene Karte von deiner Zauber- & Fallenzone auf den Friedhof legen; beschwöre 1 „Nouvelles“-Ritualmonster als Ritualbeschwörung von deiner Hand, indem du Monster von deiner Hand oder Spielfeldseite, deren gemeinsame Stufe genau der Stufe jenes Ritualmonsters entspricht, als Tribut anbietest. Du kannst jeden Effekt von „Recette de Personnel (Personal-Rezept)“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Puedes seleccionar 1 Monstruo de Ritual que controles; Invoca de Modo Especial 1 "Ficha Nouvelles" (Demonio/OSCURIDAD/Nivel 1/ATK 50/DEF 50). El Nivel de esta Ficha se convierte en el mismo que el de ese monstruo. Puedes mandar al Cementerio esta carta boca arriba en tu Zona de Magia y Trampas; Invoca por Ritual 1 Monstruo de Ritual "Nouvelles" desde tu mano Sacrificando monstruos en tu mano o Campo cuyos Niveles totales sean exactamente iguales al Nivel de ese Monstruo de Ritual. Sólo puedes usar cada efecto de "Recette de Personnel (Receta del Personal)" una vez por turno.
+  fr: |-
+    Vous pouvez cibler 1 Monstre Rituel que vous contrôlez ; Invoquez Spécialement 1 "Jeton Nouvelles" (Démon/TÉNÈBRES/Niveau 1/ATK 50/DEF 50). Le Niveau de ce Jeton devient le même que celui du monstre. Vous pouvez envoyer cette carte face recto depuis votre Zone Magie & Piège au Cimetière ; Invoquez Rituellement 1 Monstre Rituel "Nouvelles" depuis votre main en Sacrifiant des monstres depuis votre main ou Terrain dont le Niveau total est exactement égal au Niveau du Monstre Rituel. Vous ne pouvez utiliser chaque effet de "Recette du Personnel" qu'une fois par tour.
+  it: |-
+    Puoi scegliere come bersaglio 1 Mostro Rituale che controlli; Evoca Specialmente 1 "Segna-Nouvelles" (Demone/OSCURITÀ/Livello 1/ATK 50/DEF 50). Il Livello di questo Segna-Mostro diventa lo stesso di quel mostro. Puoi mandare questa carta scoperta dalla tua Zona Magie & Trappole al Cimitero; Evoca tramite Rituale 1 Mostro Rituale "Nouvelles" dalla tua mano offrendo come Tributo mostri dalla tua mano o Terreno con Livello totale esattamente pari al Livello di quel Mostro Rituale. Puoi utilizzare ogni effetto di "Recette de Personnel (Ricetta dello Staff)" una sola volta per turno.
+  pt: |-
+    Você pode escolher 1 Monstro de Ritual que você controla; Invoque por Invocação-Especial 1 "Ficha de Nouvelles" (Demônio/TREVAS/Nível 1/ATK 50/DEF 50). O Nível desta Ficha se torna o mesmo que o desse monstro. Você pode enviar para o Cemitério este card com a face para cima da sua Zona de Magias & Armadilhas; Invoque por Invocação-Ritual 1 Monstro de Ritual "Nouvelles" da sua mão ao oferecer como Tributo monstros da sua mão ou do campo cuja soma dos Níveis seja exatamente igual ao Nível desse Monstro de Ritual. Você só pode usar cada efeito de "Recette de Personnel (Receita dos Funcionários)" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドの儀式モンスター１体を対象として発動できる。自分フィールドに「ヌーベルズトークン」（悪魔族・闇・星１・攻／守５０）１体を特殊召喚する。このトークンのレベルは、対象のモンスターと同じになる。②：魔法＆罠ゾーンの表側表示のこのカードを墓地へ送って発動できる。レベルの合計が儀式召喚するモンスターと同じになるように、自分の手札・フィールドのモンスターをリリースし、手札から「ヌーベルズ」儀式モンスター１体を儀式召喚する。
   ko:
