--- a/data/cards/41773061.yaml
+++ b/data/cards/41773061.yaml
@@ -2,11 +2,11 @@ konami_id: 18746
 password: 41773061
 name:
   en: Voici la Carte (Today's Menu)
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Voici la Carte (Tageskarte)
+  es: Voici la Carte (El Menú del Día)
+  fr: Voici la Carte (Menu du Jour)
+  it: Voici la Carte (Menù del Giorno)
+  pt: Voici la Carte (Menu do Dia)
   ja: <ruby>Ｖｏｉｃｉ ｌａ Ｃａｒｔｅ<rt>ボワシ・ラ・カルト</rt></ruby>～メニューはこちら～
   ja_romaji: Bowashi Ra Karuto ~ Menyū wa Kochira ~
   ko:
@@ -19,11 +19,31 @@ text:
     ● Beast-Warrior: "Recette de Poisson (Fish Recipe)"
     ● Warrior: "Recette de Viande (Meat Recipe)"
     You can only activate 1 "Voici la Carte (Today's Menu)" per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Zeige 2 „Nouvelles“-Monster mit unterschiedlichen Namen von deinem Deck vor, dein Gegner bestimmt 1, das du deiner Hand hinzufügst, und du mischst das andere in dein Deck, dann kannst du deiner Hand 1 dieser Karten von deinem Deck oder Friedhof hinzufügen, basierend auf dem Monstertyp, der deiner Hand durch diesen Effekt hinzugefügt wurde.
+    ● Ungeheuer-Krieger: „Recette de Poisson (Fisch-Rezept)“
+    ● Krieger: „Recette de Viande (Fleisch-Rezept)“
+    Du kannst nur 1 „Voici la Carte (Tageskarte)“ pro Spielzug aktivieren.
+  es: |-
+    Muestra 2 monstruos "Nouvelles" con nombres diferentes en tu Deck, tu adversario elige 1 para que lo añadas a tu mano, y baraja el otro a tu Deck, y después puedes añadir a tu mano 1 de estas cartas en tu Deck o Cementerio, basado en el Tipo de Monstruo añadido a tu mano por este efecto.
+    ● Guerrero-Bestia: "Recette de Poisson (Receta de Pescado)"
+    ● Guerrero: "Recette de Viande (Receta de Carne)"
+    Sólo puedes activar 1 "Voici la Carte (El Menú del Día)" por turno.
+  fr: |-
+    Révélez 2 monstres "Nouvelles" de noms différents depuis votre Deck, votre adversaire en choisit 1 pour vous à ajouter à votre main, et vous mélangez l'autre dans votre Deck, puis vous pouvez ajouter 1 de ces cartes depuis votre Deck ou Cimetière à votre main selon le Type de Monstre ajouté à votre main par cet effet.
+    ● Bête-Guerrier : "Recette de Poisson"
+    ● Guerrier : "Recette de Viande"
+    Vous ne pouvez activer qu'1 "Voici la Carte (Menu du Jour)" par tour.
+  it: |-
+    Rivela 2 mostri "Nouvelles" con nomi diversi dal tuo Deck, il tuo avversario ne seleziona 1 da farti aggiungere alla tua mano, e mischi l'altro nel tuo Deck, poi puoi aggiungere 1 di queste carte dal tuo Deck o Cimitero alla tua mano a seconda del Tipo di Mostro aggiunto alla tua mano da questo effetto.
+    ● Guerriero-Bestia: "Recette de Poisson (Ricetta di Pesce)"
+    ● Guerriero: "Recette de Viande (Ricetta di Carne)"
+    Puoi attivare solo 1 "Voici la Carte (Menù del Giorno)" per turno.
+  pt: |-
+    Revele 2 monstros "Nouvelles" com nomes diferentes do seu Deck, seu oponente seleciona 1 para que você adicione à sua mão, e você embaralha o outro no seu Deck e, depois, você pode adicionar 1 desses cards do seu Deck ou Cemitério à sua mão, de acordo com o Tipo de Monstro adicionado à sua mão por este efeito.
+    ● Besta-Guerreira: "Recette de Poisson (Receita de Peixe)"
+    ● Guerreiro: "Recette de Viande (Receita de Carne)"
+    Você só pode ativar 1 "Voici la Carte (Menu do Dia)" por turno.
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：デッキからカード名が異なる「ヌーベルズ」モンスター２体を相手に見せ、相手はその中から１体選ぶ。そのモンスター１体を自分の手札に加え、残りをデッキに戻す。その後、この効果で手札に加えたモンスターの種族によって以下のカード１枚を自分のデッキ・墓地から選んで手札に加える事ができる。
     ●獣戦士族：「Ｒｅｃｅｔｔｅ ｄｅ Ｐｏｉｓｓｏｎ～魚料理のレシピ～」
