--- a/data/cards/54562327.yaml
+++ b/data/cards/54562327.yaml
@@ -2,11 +2,11 @@ konami_id: 18734
 password: 54562327
 name:
   en: Stake your Soul!
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Setze deine Seele!
+  es: ¡Pon en Juego tu Alma!
+  fr: Misez votre Âme !
+  it: Metti in Palio la tua Anima!
+  pt: Aposte sua Alma!
   ja: <ruby>Ｓｔａｋｅ<rt>ステイク</rt></ruby> <ruby>Ｙｏｕｒ<rt>ユア</rt></ruby> <ruby>Ｓｏｕｌ<rt>ソウル</rt></ruby>！
   ja_romaji: Suteiku Yua Souru!
   ko:
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     Reveal 1 monster in your hand; Special Summon 1 "Vanquish Soul" monster with the same Attribute, but a different name, from your Deck, but return it to the hand during the End Phase. You can only activate 1 "Stake your Soul!" per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Zeige 1 Monster in deiner Hand vor; beschwöre 1 „Bezwingerseele“-Monster mit derselben Eigenschaft, aber einem unterschiedlichen Namen als Spezialbeschwörung von deinem Deck, aber gib es während der End Phase auf die Hand zurück. Du kannst nur 1 „Setze deine Seele!“ pro Spielzug aktivieren.
+  es: |-
+    Muestra 1 monstruo en tu mano; Invoca de Modo Especial, desde tu Deck, 1 monstruo "Derrota Almas" con el mismo Atributo, pero nombre diferente, pero devuélvelo a la mano durante la End Phase. Sólo puedes activar 1 "¡Pon en Juego tu Alma!" por turno.
+  fr: |-
+    Révélez 1 monstre dans votre main ; Invoquez Spécialement 1 monstre "Âme du Vainqueur" du même Attribut, mais de nom différent, depuis votre Deck, mais renvoyez-le à la main durant la End Phase. Vous ne pouvez activer qu'1 "Misez votre Âme !" par tour.
+  it: |-
+    Rivela 1 mostro nella tua mano; Evoca Specialmente 1 mostro "Sgomina Anima" con lo stesso Attributo, ma con un nome diverso, dal tuo Deck, ma fallo ritornare nella mano durante la End Phase. Puoi attivare solo 1 "Metti in Palio la tua Anima!" per turno.
+  pt: |-
+    Revele 1 monstro na sua mão; Invoque por Invocação-Especial 1 monstro "Alma Aniquiladora" com o mesmo Atributo, mas um nome diferente, do seu Deck, mas devolva-o para a mão durante a Fase Final. Você só pode ativar 1 "Aposte sua Alma!" por turno.
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：手札のモンスター１体を相手に見せて発動できる。見せたモンスターとはカード名が異なり、属性が同じ「ＶＳ」モンスター１体をデッキから特殊召喚する。この効果で特殊召喚したモンスターはエンドフェイズに持ち主の手札に戻る。
   ko:
