--- a/data/cards/87778106.yaml
+++ b/data/cards/87778106.yaml
@@ -2,11 +2,11 @@ konami_id: 18747
 password: 87778106
 name:
   en: Recette de Poisson (Fish Recipe)
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Recette de Poisson (Fisch-Rezept)
+  es: Recette de Poisson (Receta de Pescado)
+  fr: Recette de Poisson
+  it: Recette de Poisson (Ricetta di Pesce)
+  pt: Recette de Poisson (Receita de Peixe)
   ja: <ruby>Ｒｅｃｅｔｔｅ ｄｅ Ｐｏｉｓｓｏｎ<rt>ルセット・ド・ポワソン</rt></ruby>～<ruby>魚<rt>さかな</rt></ruby><ruby>料<rt>りょう</rt></ruby><ruby>理<rt>り</rt></ruby>のレシピ～
   ja_romaji: Rusetto Do Powason ~ Sakanaryōri no Reshipi ~
   ko:
@@ -17,11 +17,21 @@ text:
   en: |-
     This card can be used to Ritual Summon any "Nouvelles" Ritual Monster. You must also Tribute monsters from your hand or field whose total Levels equal or exceed the Level of the Ritual Monster you Ritual Summon. Then, if you Ritual Summoned "Buerillabaisse de Nouvelles", you can apply the following effect.
     ● Add 1 "Recipe" Ritual Spell from your Deck or GY to your hand, except "Recette de Poisson (Fish Recipe)".
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Diese Karte kann verwendet werden, um ein beliebiges „Nouvelles“-Ritualmonster als Ritualbeschwörung zu beschwören. Du musst zusätzlich Monster von deiner Hand oder Spielfeldseite als Tribut anbieten, deren gemeinsame Stufe größer oder gleich der Stufe des Ritualmonsters ist, das du als Ritualbeschwörung beschwörst. Dann, falls du „Buerillabaisse der Nouvelles“ als Ritualbeschwörung beschworen hast, kannst du den folgenden Effekt ausführen.
+    ● Füge deiner Hand 1 „Rezept“-Ritualzauber von deinem Deck oder Friedhof hinzu, außer „Recette de Poisson (Fisch-Rezept)“.
+  es: |-
+    Esta carta puede ser usada para Invocar por Ritual cualquier Monstruo de Ritual "Nouvelles". También debes Sacrificar monstruos en tu mano o Campo cuyos Niveles totales sean iguales o superen el Nivel del Monstruo de Ritual que Invocas por Ritual. Después, si Invocaste por Ritual "Buerllabesa de Nouvelles", puedes aplicar el siguiente efecto.
+    ● Añade a tu mano 1 Mágica de Ritual "Receta" en tu Deck o Cementerio, excepto "Recette de Poisson (Receta de Pescado)".
+  fr: |-
+    Cette carte peut être utilisée pour Invoquer Rituellement un Monstre Rituel "Nouvelles". Vous devez aussi Sacrifier des monstres depuis votre main ou Terrain dont le Niveau total est supérieur ou égal au Niveau du Monstre Rituel que vous Invoquez Rituellement. Puis, si vous avez Invoqué Rituellement "Buerillabaisse de Nouvelles", vous pouvez appliquer l'effet suivant.
+    ● Ajoutez 1 Magie Rituelle "Recette" ("Recette de Poisson" exclu) depuis votre Deck ou Cimetière à votre main.
+  it: |-
+    Questa carta può essere utilizzata per Evocare tramite Rituale qualsiasi Mostro Rituale "Nouvelles". Devi anche offrire come Tributo mostri dalla tua mano o Terreno con Livello totale pari o superiore al Livello del Mostro Rituale che stai Evocando tramite Rituale. Poi, se hai Evocato tramite Rituale "Buerillabaisse de Nouvelles", puoi applicare il seguente effetto.
+    ● Aggiungi 1 Magia Rituale "Ricetta" dal tuo Deck o Cimitero alla tua mano, eccetto "Recette de Poisson (Ricetta di Pesce)".
+  pt: |-
+    Este card pode ser usado para a Invocação-Ritual de qualquer Monstro de Ritual "Nouvelles". Você também deve oferecer como Tributo monstros da sua mão ou do campo cuja soma dos Níveis seja igual ou exceda o Nível do Monstro de Ritual que você Invocar por Invocação-Ritual. Depois, se você Invocou por Invocação-Ritual "Buerillabaisse de Nouvelles", você pode aplicar o seguinte efeito.
+    ● Adicione 1 Magia de Ritual "Receita" do seu Deck ou Cemitério à sua mão, exceto "Recette de Poisson (Receita de Peixe)".
   ja: |-
     「ヌーベルズ」儀式モンスターの降臨に必要。①：レベルの合計が儀式召喚するモンスターのレベル以上になるように、自分の手札・フィールドのモンスターをリリースし、手札から「ヌーベルズ」儀式モンスター１体を儀式召喚する。この効果で「ブエリヤベース・ド・ヌーベルズ」を儀式召喚した場合、さらに以下の効果を適用できる。
     ●自分のデッキ・墓地から「Ｒｅｃｅｔｔｅ ｄｅ Ｐｏｉｓｓｏｎ～魚料理のレシピ～」以外の「レシピ」儀式魔法カード１枚を手札に加える。
