--- a/data/cards/87955518.yaml
+++ b/data/cards/87955518.yaml
@@ -2,11 +2,11 @@ konami_id: 18750
 password: 87955518
 name:
   en: Chef's Special Recipe
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Spezial-Rezept des Küchenchefs
+  es: La Receta Especial del Chef
+  fr: Recette Spéciale du Chef
+  it: Ricetta Speciale dello Chef
+  pt: Receita Especial do Chef
   ja: <ruby>Ｒｅｃｅｔｔｅ ｄｅ Ｓｐéｃｉａｌｉｔé<rt>ルセット・ド・スペシャリテ</rt></ruby>～<ruby>料理長<rt>シェフ</rt></ruby><ruby>自<rt>じ</rt></ruby><ruby>慢<rt>まん</rt></ruby>のレシピ～
   ja_romaji: Rusetto Do Supesharite ~ Shefu Jiman no Reshipi ~
   ko:
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     When a Spell/Trap Card, or monster effect, is activated while you control a "Nouvelles" Ritual Monster: Negate the activation, then you can destroy that card if you control a monster that was Special Summoned by the effect of a "Nouvelles" monster. If you Special Summon "Hungry Burger": You can banish this card from your GY; Tribute as many monsters your opponent controls as possible. You can only use each effect of "Chef's Special Recipe" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Wenn eine Zauber-/Fallenkarte oder ein Monstereffekt aktiviert wird, solange du ein „Nouvelles“-Ritualmonster kontrollierst: Annulliere die Aktivierung, dann kannst du jene Karte zerstören, falls du ein Monster kontrollierst, das durch den Effekt eines „Nouvelles“-Monsters als Spezialbeschwörung beschworen wurde. Falls du „Hungriger Burger“ als Spezialbeschwörung beschwörst: Du kannst diese Karte von deinem Friedhof verbannen; biete so viele Monster, die dein Gegner kontrolliert, wie möglich als Tribut an. Du kannst jeden Effekt von „Spezial-Rezept des Küchenchefs“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Cuando es activada una Carta Mágica/de Trampa o efecto de monstruo, mientras controlas un Monstruo de Ritual "Nouvelles": niega la activación, y después puedes destruir esa carta si controlas un monstruo que fue Invocado de Modo Especial por efecto de un monstruo "Nouvelles". Si Invocas "Hamburguesa Hambrienta" de Modo Especial: puedes desterrar esta carta en tu Cementerio; Sacrifica tantos monstruos que controle tu adversario como sea posible. Sólo puedes usar cada efecto de "La Receta Especial del Chef" una vez por turno.
+  fr: |-
+    Lorsqu'une Carte Magie/Piège ou un effet de monstre est activé tant que vous contrôlez un Monstre Rituel "Nouvelles" : annulez l'activation, puis vous pouvez détruire la carte si vous contrôlez un monstre qui a été Invoqué Spécialement par l'effet d'un monstre "Nouvelles". Si vous Invoquez Spécialement "Burger Affamé" : vous pouvez bannir cette carte depuis votre Cimetière ; Sacrifiez autant de monstres contrôlés par votre adversaire que possible. Vous ne pouvez utiliser chaque effet de "Recette Spéciale du Chef" qu'une fois par tour.
+  it: |-
+    Quando viene attivata una Carta Magia/Trappola o l'effetto di un mostro mentre controlli un Mostro Rituale "Nouvelles": annulla l'attivazione, poi puoi distruggere quella carta se controlli un mostro che è stato Evocato Specialmente dall'effetto di un mostro "Nouvelles". Se Evochi Specialmente "Hamburger Affamato": puoi bandire questa carta dal tuo Cimitero; offri come Tributo tanti mostri controllati dal tuo avversario quanti possibile. Puoi utilizzare ogni effetto di "Ricetta Speciale dello Chef" una sola volta per turno.
+  pt: |-
+    Quando um Card de Magia/Armadilha, ou efeito de monstro, for ativado enquanto você controlar um Monstro de Ritual "Nouvelles": negue a ativação e, depois, você pode destruir esse card se você controlar um monstro que foi Invocado por Invocação-Especial pelo efeito de um monstro "Nouvelles". Se você Invocar por Invocação-Especial "Hambúrguer Esfomeado": você pode banir este card do seu Cemitério; ofereça como Tributo tantos monstros que seu oponente controla quanto possível. Você só pode usar cada efeito de "Receita Especial do Chef" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドに「ヌーベルズ」儀式モンスターが存在し、モンスターの効果・魔法・罠カードが発動した時に発動できる。その発動を無効にする。「ヌーベルズ」モンスターの効果で特殊召喚されたモンスターが自分フィールドに存在する場合、さらにその無効にしたカードを破壊できる。②：自分が「ハングリーバーガー」の特殊召喚に成功した場合、墓地のこのカードを除外して発動できる。相手フィールドのモンスターを可能な限りリリースする。
   ko:
