--- a/data/cards/91073013.yaml
+++ b/data/cards/91073013.yaml
@@ -2,11 +2,11 @@ konami_id: 18732
 password: 91073013
 name:
   en: Vanquish Soul Caesar Valius
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Bezwingerseele Caesar Valius
+  es: Derrota Almas César Valius
+  fr: Âme du Vainqueur César Valius
+  it: Sgomina Anima Cesare Valius
+  pt: Alma Aniquiladora César Valius
   ja: <ruby>ＶＳ<rt>ヴァンキッシュ・ソウル</rt></ruby><ruby>龍帝<rt>カイザー</rt></ruby>ヴァリウス
   ja_romaji: Vankisshu Souru Kaizā Variusu
   ko:
@@ -19,11 +19,31 @@ text:
     ● EARTH: This face-up card is unaffected by your opponent's activated effects this turn.
     ● EARTH, FIRE, & DARK: Destroy 1 other card on the field.
     You can only use each effect of "Vanquish Soul Caesar Valius" once per turn, and cannot activate more than 1 in the same Chain.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Während der Main Phase (Schnelleffekt): Du kannst 1 „Bezwingerseele“-Nichtdrache-Monster wählen, das du kontrollierst; gib es auf die Hand zurück und falls du dies tust, beschwöre diese Karte als Spezialbeschwörung von deiner Hand. (Schnelleffekt): Du kannst 1 dieser Effekte aktivieren, indem du ein oder mehr Monster mit den aufgeführten Eigenschaften in deiner Hand vorzeigst;
+    ● ERDE: Diese offene Karte bleibt in diesem Spielzug von aktivierten Effekten deines Gegners unberührt.
+    ● ERDE, FEUER und FINSTERNIS: Zerstöre 1 andere Karte auf dem Spielfeld.
+    Du kannst jeden Effekt von „Bezwingerseele Caesar Valius“ nur einmal pro Spielzug verwenden und du kannst nicht mehr als 1 in derselben Kette aktivieren.
+  es: |-
+    Durante la Main Phase (Efecto Rápido): puedes seleccionar 1 monstruo "Derrota Almas" que no sea Dragón que controles; devuélvelo a la mano y, si lo haces, Invoca esta carta de Modo Especial desde tu mano. (Efecto Rápido): puedes activar 1 de estos efectos, mostrando uno o más monstruos en tu mano con el o los Atributos listados;
+    ● TIERRA: Esta carta boca arriba no es afectada por los efectos activados de tu adversario este turno.
+    ● TIERRA, FUEGO & OSCURIDAD: Destruye otra carta en el Campo.
+    Sólo puedes usar cada efecto de "Derrota Almas César Valius" una vez por turno, y no puedes activar más de 1 en la misma Cadena.
+  fr: |-
+    Durant la Main Phase (Effet Rapide) : vous pouvez cibler 1 monstre "Âme du Vainqueur" non-Dragon que vous contrôlez ; renvoyez-le à la main, et si vous le faites, Invoquez Spécialement cette carte depuis votre main. (Effet Rapide) : vous pouvez activer 1 de ces effets, en révélant un ou plusieurs monstres dans votre main avec les Attributs listés ;
+    ● TERRE : Ce tour, cette carte face recto n'est pas affectée par les effets activés de votre adversaire.
+    ● TERRE, FEU et TÉNÈBRES : Détruisez 1 autre carte sur le Terrain.
+    Vous ne pouvez utiliser chaque effet de "Âme du Vainqueur César Valius" qu'une fois par tour, et ne pouvez en activer que max. 1 dans la même Chaîne.
+  it: |-
+    Durante la Main Phase (Effetto Rapido): puoi scegliere come bersaglio 1 mostro "Sgomina Anima" non-Drago che controlli; fallo ritornare nella mano e, se lo fai, Evoca Specialmente questa carta dalla tua mano. (Effetto Rapido): puoi attivare 1 di questi effetti, rivelando uno o più mostri nella tua mano con gli Attributi indicati;
+    ● TERRA: Questa carta scoperta è immune agli effetti attivati del tuo avversario in questo turno.
+    ● TERRA, FUOCO, & OSCURITÀ: Distruggi 1 altra carta sul Terreno.
+    Puoi utilizzare ogni effetto di "Sgomina Anima Cesare Valius" una sola volta per turno, e non puoi attivarne più di 1 nella stessa Catena.
+  pt: |-
+    Durante a Fase Principal (Efeito Rápido): você pode escolher 1 monstro "Alma Aniquiladora" não-Dragão que você controla; devolva-o para a mão e, se isso acontecer, Invoque este card por Invocação-Especial da sua mão. (Efeito Rápido): você pode ativar 1 desses efeitos ao revelar um ou mais monstros na sua mão com o(s) Atributo(s) listado(s);
+    ● TERRA: Neste turno, este card com a face para cima não é afetado pelos efeitos ativados do seu oponente.
+    ● TERRA, FOGO & TREVAS: Destrua 1 outro card no campo.
+    Você só pode usar cada efeito de "Alma Aniquiladora César Valius" uma vez por turno e não pode ativar mais que 1 na mesma Corrente.
   ja: |-
     このカード名の①②の効果は、それぞれ１ターンに１度しか使用できず、同一チェーン上では発動できない。①：自分・相手のメインフェイズに、ドラゴン族以外の自分フィールドの「ＶＳ」モンスター１体を対象として発動できる。そのモンスターを手札に戻し、このカードを手札から特殊召喚する。②：自分・相手ターンに、以下から１つ選択し、その属性の手札のモンスターを１体ずつ相手に見せて発動できる。●地：このターン、表側表示のこのカードは相手が発動した効果を受けない。●地・炎・闇：フィールドの他のカード１枚を選んで破壊する。
   ko:
