--- a/data/cards/92895501.yaml
+++ b/data/cards/92895501.yaml
@@ -2,11 +2,11 @@ konami_id: 18729
 password: 92895501
 name:
   en: Vanquish Soul Heavy Borger
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Bezwingerseele Schwerer Borger
+  es: Derrota Almas Borg Pesado
+  fr: Âme du Vainqueur Borger Lourd
+  it: Sgomina Anima Borger Pesante
+  pt: Alma Aniquiladora Borguer Pesado
   ja: <ruby>ＶＳ<rt>ヴァンキッシュ・ソウル</rt></ruby> ヘヴィ・ボーガー
   ja_romaji: Vankisshu Souru Hevi Bōgā
   ko:
@@ -19,11 +19,31 @@ text:
     ● DARK: Draw 1 card.
     ● EARTH & FIRE: Inflict 1500 damage to your opponent.
     You can only use each effect of "Vanquish Soul Heavy Borger" once per turn, and cannot activate more than 1 in the same Chain.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Während der Main Phase (Schnelleffekt): Du kannst 1 „Bezwingerseele“-Nichtmaschine-Monster wählen, das du kontrollierst; gib es auf die Hand zurück und falls du dies tust, beschwöre diese Karte als Spezialbeschwörung von deiner Hand. (Schnelleffekt): Du kannst 1 dieser Effekte aktivieren, indem du ein oder mehr Monster mit den aufgeführten Eigenschaften in deiner Hand vorzeigst;
+    ● FINSTERNIS: Ziehe 1 Karte.
+    ● ERDE und FEUER: Füge deinem Gegner 1500 Schaden zu.
+    Du kannst jeden Effekt von „Bezwingerseele Schwerer Borger“ nur einmal pro Spielzug verwenden und du kannst nicht mehr als 1 in derselben Kette aktivieren.
+  es: |-
+    Durante la Main Phase (Efecto Rápido): puedes seleccionar 1 monstruo "Derrota Almas" que no sea Máquina que controles; devuélvelo a la mano y, si lo haces, Invoca esta carta de Modo Especial desde tu mano. (Efecto Rápido): puedes activar 1 de estos efectos, mostrando uno o más monstruos en tu mano con el o los Atributos listados;
+    ● OSCURIDAD: Roba 1 carta.
+    ● TIERRA & FUEGO: Inflige 1500 puntos de daño a tu adversario.
+    Sólo puedes usar cada efecto de "Derrota Almas Borg Pesado" una vez por turno, y no puedes activar más de 1 en la misma Cadena.
+  fr: |-
+    Durant la Main Phase (Effet Rapide) : vous pouvez cibler 1 monstre "Âme du Vainqueur" non-Machine que vous contrôlez ; renvoyez-le à la main, et si vous le faites, Invoquez Spécialement cette carte depuis votre main. (Effet Rapide) : vous pouvez activer 1 de ces effets, en révélant un ou plusieurs monstres dans votre main avec les Attributs listés ;
+    ● TÉNÈBRES : Piochez 1 carte.
+    ● TERRE et FEU : Infligez 1500 points de dommages à votre adversaire.
+    Vous ne pouvez utiliser chaque effet de "Âme du Vainqueur Borger Lourd" qu'une fois par tour, et ne pouvez en activer que max. 1 dans la même Chaîne.
+  it: |-
+    Durante la Main Phase (Effetto Rapido): puoi scegliere come bersaglio 1 mostro "Sgomina Anima" non-Macchina che controlli; fallo ritornare nella mano e, se lo fai, Evoca Specialmente questa carta dalla tua mano. (Effetto Rapido): puoi attivare 1 di questi effetti, rivelando uno o più mostri nella tua mano con gli Attributi indicati;
+    ● OSCURITÀ: Pesca 1 carta.
+    ● TERRA & FUOCO: Infliggi 1500 danni al tuo avversario.
+    Puoi utilizzare ogni effetto di "Sgomina Anima Borger Pesante" una sola volta per turno, e non puoi attivarne più di 1 nella stessa Catena.
+  pt: |-
+    Durante a Fase Principal (Efeito Rápido): você pode escolher 1 monstro "Alma Aniquiladora" não-Máquina que você controla; devolva-o para a mão e, se isso acontecer, Invoque este card por Invocação-Especial da sua mão. (Efeito Rápido): você pode ativar 1 desses efeitos ao revelar um ou mais monstros na sua mão com o(s) Atributo(s) listado(s);
+    ● TREVAS: Compre 1 card.
+    ● TERRA & FOGO: Cause 1500 de dano ao seu oponente.
+    Você só pode usar cada efeito de "Alma Aniquiladora Borguer Pesado" uma vez por turno e não pode ativar mais que 1 na mesma Corrente.
   ja: |-
     このカード名の①②の効果は、それぞれ１ターンに１度しか使用できず、同一チェーン上では発動できない。①：自分・相手のメインフェイズに、機械族以外の自分フィールドの「ＶＳ」モンスター１体を対象として発動できる。そのモンスターを手札に戻し、このカードを手札から特殊召喚する。②：自分・相手ターンに、以下から１つ選択し、その属性の手札のモンスターを１体ずつ相手に見せて発動できる。●闇：自分はデッキから１枚ドローする。●地・炎：相手に１５００ダメージを与える。
   ko:
