--- a/data/cards/93918159.yaml
+++ b/data/cards/93918159.yaml
@@ -2,11 +2,11 @@ konami_id: 18726
 password: 93918159
 name:
   en: Supersoaring
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Supersteigflug
+  es: Superelevación
+  fr: Super Envol
+  it: Superslancio
+  pt: Superascendente
   ja: <ruby>超<rt>ちょう</rt></ruby><ruby>越<rt>えつ</rt></ruby><ruby>天<rt>てん</rt></ruby><ruby>翔<rt>しょう</rt></ruby>
   ja_romaji: Chōetsu Tenshō
   ko:
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     Target 1 Dinosaur monster that is banished or in either GY; Special Summon it to your field. You can only activate 1 "Supersoaring" per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Wähle 1 Dinosaurier-Monster, das verbannt ist oder sich in einem beliebigen Friedhof befindet; beschwöre es als Spezialbeschwörung auf deine Spielfeldseite. Du kannst nur 1 „Supersteigflug“ pro Spielzug aktivieren.
+  es: |-
+    Selecciona 1 monstruo Dinosaurio que esté desterrado o en cualquier Cementerio; Invócalo de Modo Especial a tu Campo. Sólo puedes activar 1 "Superelevación" por turno.
+  fr: |-
+    Ciblez 1 monstre Dinosaure qui est banni ou dans l'un des Cimetières ; Invoquez-le Spécialement sur votre Terrain. Vous ne pouvez activer qu'1 "Super Envol" par tour.
+  it: |-
+    Scegli come bersaglio 1 mostro Dinosauro che è bandito o in qualsiasi Cimitero; Evocalo Specialmente sul tuo Terreno. Puoi attivare solo 1 "Superslancio" per turno.
+  pt: |-
+    Escolha 1 monstro Dinossauro que estiver banido ou em qualquer Cemitério; Invoque-o por Invocação-Especial no seu campo. Você só pode ativar 1 "Superascendente" por turno.
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：お互いの墓地のモンスター及び除外されているモンスターの中から、恐竜族モンスター１体を対象として発動できる。そのモンスターを自分フィールドに特殊召喚する。
   ko:
