--- a/data/cards/94130731.yaml
+++ b/data/cards/94130731.yaml
@@ -2,11 +2,11 @@ konami_id: 18723
 password: 94130731
 name:
   en: Transcendosaurus Glaciasaurus
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Transzendosaurier Gletschosaurier
+  es: Glaciasaurus Trascendosaurio
+  fr: Transcendosaure Glaciosaure
+  it: Trascendosauro Glaciasaurus
+  pt: Transcendossauro Glaciossauro
   ja: <ruby>超<rt>ちょう</rt></ruby><ruby>越<rt>えつ</rt></ruby><ruby>竜<rt>りゅう</rt></ruby>グレイスザウルス
   ja_romaji: Chōetsuryū Gureisuzaurusu
   ko:
@@ -17,11 +17,21 @@ text:
   en: |-
     1 Tuner + 1+ non-Tuner monsters
     Cannot be destroyed by battle. Dinosaur monsters you control that were Special Summoned from the GY cannot be destroyed by your opponent's card effects, also your opponent cannot target them with card effects. If this card is destroyed: You can shuffle 1 Normal Monster from your GY into the Deck, then you can Special Summon this card. You can only use this effect of "Transcendosaurus Glaciasaurus" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    1 Empfänger + 1+ Nicht-Empfänger-Monster
+    Kann nicht durch Kampf zerstört werden. Dinosaurier-Monster, die du kontrollierst und die als Spezialbeschwörung vom Friedhof beschworen wurden, können nicht durch Karteneffekte deines Gegners zerstört werden, zusätzlich kann dein Gegner sie nicht als Ziel für Karteneffekte wählen. Falls diese Karte zerstört wird: Du kannst 1 Normales Monster von deinem Friedhof ins Deck mischen, dann kannst du diese Karte als Spezialbeschwörung beschwören. Du kannst diesen Effekt von „Transzendosaurier Gletschosaurier“ nur einmal pro Spielzug verwenden.
+  es: |-
+    1 Cantante + 1+ monstruos que no sean Cantantes
+    No puede ser destruido en batalla. Los monstruos Dinosaurio que tú controles que fueron Invocados de Modo Especial desde el Cementerio no pueden ser destruidos por efectos de cartas de tu adversario, y además tu adversario no puede seleccionarlos con efectos de cartas. Si esta carta es destruida: puedes barajar al Deck 1 Monstruo Normal en tu Cementerio, y después puedes Invocar esta carta de Modo Especial. Sólo puedes usar este efecto de "Glaciasaurus Trascendosaurio" una vez por turno.
+  fr: |-
+    1 Syntoniseur + 1+ monstre non-Syntoniseur
+    Non destructible au combat. Les monstres Dinosaure que vous contrôlez qui ont été Invoqués Spécialement depuis le Cimetière ne peuvent pas être détruits par des effets de carte de votre adversaire, et aussi, votre adversaire ne peut pas les cibler avec des effets de carte. Si cette carte est détruite : vous pouvez mélanger 1 Monstre Normal depuis votre Cimetière dans le Deck, puis vous pouvez Invoquer Spécialement cette carte. Vous ne pouvez utiliser cet effet de "Transcendosaure Glaciosaure" qu'une fois par tour.
+  it: |-
+    1 Tuner + 1+ mostri non-Tuner
+    Non può essere distrutto in battaglia. I mostri Dinosauro che controlli che sono stati Evocati Specialmente dal Cimitero non possono essere distrutti dagli effetti delle carte del tuo avversario, inoltre il tuo avversario non può sceglierli come bersaglio con gli effetti delle carte. Se questa carta viene distrutta: puoi mischiare 1 Mostro Normale dal tuo Cimitero nel Deck, poi puoi Evocare Specialmente questa carta. Puoi utilizzare questo effetto di "Trascendosauro Glaciasaurus" una sola volta per turno.
+  pt: |-
+    1 Regulador + 1+ monstros não-Reguladores
+    Não pode ser destruído em batalha. Monstros Dinossauro que você controla que foram Invocados por Invocação-Especial do Cemitério não podem ser destruídos pelos efeitos de card do seu oponente e, além disso, seu oponente não pode escolhê-los como alvo de efeitos de card. Se este card for destruído: você pode embaralhar no Deck 1 Monstro Normal do seu Cemitério e, depois, você pode Invocar este card por Invocação-Especial. Você só pode usar este efeito de "Transcendossauro Glaciossauro" uma vez por turno.
   ja: |-
     チューナー＋チューナー以外のモンスター１体以上
     このカード名の③の効果は１ターンに１度しか使用できない。①：このカードは戦闘では破壊されない。②：このカードがモンスターゾーンに存在する限り、墓地から特殊召喚された自分フィールドの恐竜族モンスターは、相手の効果の対象にならず、相手の効果では破壊されない。③：このカードが破壊された場合に発動できる。自分の墓地から通常モンスター１体を選んでデッキに戻す。その後、このカードを特殊召喚できる。
