--- a/data/rush/15164.yaml
+++ b/data/rush/15164.yaml
@@ -64,6 +64,8 @@ images:
   image: MultistrikeDragonDragias-RDAKG2-JP-UR.png
 - index: 3
   image: MultistrikeDragonDragias-RDKP12-JP-ORR.png
+- index: 4
+  image: MultistrikeDragonDragias-RDCCC1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/ST02-JP001
