--- a/data/rush/17543.yaml
+++ b/data/rush/17543.yaml
@@ -1,6 +1,6 @@
 konami_id: 17543
 name:
-  en: Card Reprint
+  en: Card Reprinting
   de:
   es:
   fr:
@@ -44,7 +44,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: CardReprint-RDLGP1-JP-C.png
+  image: CardReprinting-RDLGP1-JP-C.png
 sets:
   ja:
   - set_number: RD/KP09-JP057
