--- a/data/rush/yugipedia937019.yaml
+++ b/data/rush/yugipedia937019.yaml
@@ -1,6 +1,6 @@
 konami_id:
 name:
-  en: Music Princess's Requiem Sonata
+  en: Music Princess's Requiem
   de:
   es:
   fr:
@@ -42,7 +42,7 @@ series:
 - Music Princess
 images:
 - index: 1
-  image: MusicPrincesssRequiemSonata-RDTB01-JP-OP.png
+  image: MusicPrincesssRequiem-RDTB01-JP-OP.png
 sets:
   ja:
   - set_number: RD/TB01-JP034
