--- a/data/cards/08396952.yaml
+++ b/data/cards/08396952.yaml
@@ -7,7 +7,7 @@ name:
   fr: Force Arcane I - Le Magicien
   it: Energia Arcana I - Il Mago
   pt:
-  ja: アルカナフォース<ruby>Ｉ<rt>ワン</rt></ruby>－<ruby>ＴＨＥ ＭＡＧＩＣＩＡＮ<rt>ザ・マジシャン</rt></ruby>
+  ja: アルカナフォース<ruby>Ⅰ<rt>ワン</rt></ruby>－<ruby>ＴＨＥ ＭＡＧＩＣＩＡＮ<rt>ザ・マジシャン</rt></ruby>
   ja_romaji: Arukana Fōsu Wan - Za Majishan
   ko: 아르카나 포스 Ⅰ－더 매지션
   ko_rr:
