--- a/data/cards/14166715.yaml
+++ b/data/cards/14166715.yaml
@@ -2,11 +2,11 @@ konami_id: 18748
 password: 14166715
 name:
   en: Recette de Viande (Meat Recipe)
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Recette de Viande (Fleisch-Rezept)
+  es: Recette de Viande (Receta de Carne)
+  fr: Recette de Viande
+  it: Recette de Viande (Ricetta di Carne)
+  pt: Recette de Viande (Receita de Carne)
   ja: <ruby>Ｒｅｃｅｔｔｅ ｄｅ Ｖｉａｎｄｅ<rt>ルセット・ド・ヴィアンド</rt></ruby>～<ruby>肉<rt>にく</rt></ruby><ruby>料<rt>りょう</rt></ruby><ruby>理<rt>り</rt></ruby>のレシピ～
   ja_romaji: Rusetto Do Viando ~ Nikuryōri no Reshipi ~
   ko:
@@ -17,11 +17,21 @@ text:
   en: |-
     This card can be used to Ritual Summon any "Nouvelles" Ritual Monster. You must also Tribute monsters from your hand or field whose total Levels equal or exceed the Level of the Ritual Monster you Ritual Summon. Then, if you Ritual Summoned "Confiras de Nouvelles", you can apply the following effect.
     ● Change all Defense Position monsters your opponent currently controls to Attack Position.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Diese Karte kann verwendet werden, um ein beliebiges „Nouvelles“-Ritualmonster als Ritualbeschwörung zu beschwören. Du musst zusätzlich Monster von deiner Hand oder Spielfeldseite als Tribut anbieten, deren gemeinsame Stufe größer oder gleich der Stufe des Ritualmonsters ist, das du als Ritualbeschwörung beschwörst. Dann, falls du „Confiras der Nouvelles“ als Ritualbeschwörung beschworen hast, kannst du den folgenden Effekt ausführen.
+    ● Ändere alle Monster in Verteidigungsposition, die dein Gegner derzeit kontrolliert, in die Angriffsposition.
+  es: |-
+    Esta carta puede ser usada para Invocar por Ritual cualquier Monstruo de Ritual "Nouvelles". También debes Sacrificar monstruos en tu mano o Campo cuyos Niveles totales sean iguales o superen el Nivel del Monstruo de Ritual que Invocas por Ritual. Después, si Invocaste por Ritual "Confiras de Nouvelles", puedes aplicar el siguiente efecto.
+    ● Cambia a Posición de Ataque todos los monstruos en Posición de Defensa que tu adversario controle en este momento.
+  fr: |-
+    Cette carte peut être utilisée pour Invoquer Rituellement un Monstre Rituel "Nouvelles". Vous devez aussi Sacrifier des monstres depuis votre main ou Terrain dont le Niveau total est supérieur ou égal au Niveau du Monstre Rituel que vous Invoquez Rituellement. Puis, si vous avez Invoqué Rituellement "Confiras de Nouvelles", vous pouvez appliquer l'effet suivant.
+    ● Changez tous les monstres en Position de Défense actuellement contrôlés par votre adversaire en Position d'Attaque.
+  it: |-
+    Questa carta può essere utilizzata per Evocare tramite Rituale qualsiasi Mostro Rituale "Nouvelles". Devi anche offrire come Tributo mostri dalla tua mano o Terreno con Livello totale pari o superiore al Livello del Mostro Rituale che stai Evocando tramite Rituale. Poi, se hai Evocato tramite Rituale "Confiras de Nouvelles", puoi applicare il seguente effetto.
+    ● Metti in Posizione di Attacco tutti i mostri in Posizione di Difesa attualmente controllati dal tuo avversario.
+  pt: |-
+    Este card pode ser usado para a Invocação-Ritual de qualquer Monstro de Ritual "Nouvelles". Você também deve oferecer como Tributo monstros da sua mão ou do campo cuja soma dos Níveis seja igual ou exceda o Nível do Monstro de Ritual que você Invocar por Invocação-Ritual. Depois, se você Invocou por Invocação-Ritual "Confiras de Nouvelles", você pode aplicar o seguinte efeito.
+    ● Coloque em Posição de Ataque todos os monstros em Posição de Defesa que seu oponente controla atualmente.
   ja: |-
     「ヌーベルズ」儀式モンスターの降臨に必要。①：レベルの合計が儀式召喚するモンスターのレベル以上になるように、自分の手札・フィールドのモンスターをリリースし、手札から「ヌーベルズ」儀式モンスター１体を儀式召喚する。この効果で「コンフィラス・ド・ヌーベルズ」を儀式召喚した場合、さらに以下の効果を適用できる。
     ●相手フィールドの守備表示モンスターを全て表側攻撃表示にする。
