--- a/data/cards/15388353.yaml
+++ b/data/cards/15388353.yaml
@@ -2,11 +2,11 @@ konami_id: 18745
 password: 15388353
 name:
   en: Nouvelles Restaurant "At Table"
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Nouvelles-Restaurant „À Table“
+  es: Restaurante Nouvelles "À Table"
+  fr: Restaurant de Nouvelles "À Table"
+  it: Ristorante Nouvelles "À Table"
+  pt: Restaurante Nouvelles "À Table"
   ja: <ruby>Ｎｏｕｖｅｌｌｅｚ<rt>ヌーベルズ</rt></ruby> <ruby>Ａｕｂｅｒｇｅ<rt>オーベルジュ</rt></ruby> 『<ruby>À Ｔａｂｌｅ<rt>ア・ターブル</rt></ruby>』
   ja_romaji: Nūberuzu Ōberuju "A Tāburu"
   ko:
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     When this card is activated: You can add 1 "Recipe" card from your Deck or GY to your hand. Once per turn: You can place 1 Ritual Monster from your hand on the bottom of the Deck; draw 1 card. Once per turn, during your End Phase: You can target 2 cards in your GY, including a "Recipe" card; place them on the bottom of your Deck in any order, then draw 1 card. You can only activate 1 "Nouvelles Restaurant "At Table"" per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Wenn diese Karte aktiviert wird: Du kannst deiner Hand 1 „Rezept“-Karte von deinem Deck oder Friedhof hinzufügen. Einmal pro Spielzug: Du kannst 1 Ritualmonster von deiner Hand unters Deck legen; ziehe 1 Karte. Einmal pro Spielzug, während deiner End Phase: Du kannst 2 Karten in deinem Friedhof wählen, darunter eine „Rezept“-Karte; lege sie in beliebiger Reihenfolge unter dein Deck, dann ziehe 1 Karte. Du kannst nur 1 „Nouvelles-Restaurant „À Table““ pro Spielzug aktivieren.
+  es: |-
+    Cuando esta carta es activada: puedes añadir a tu mano 1 carta "Receta" en tu Deck o Cementerio. Una vez por turno: puedes poner en la parte inferior del Deck 1 Monstruo de Ritual en tu mano; roba 1 carta. Una vez por turno, durante tu End Phase: puedes seleccionar 2 cartas en tu Cementerio, incluyendo una carta "Receta"; ponlas en la parte inferior de tu Deck en cualquier orden, y después roba 1 carta. Sólo puedes activar 1 "Restaurante Nouvelles "À Table"" por turno.
+  fr: |-
+    Lorsque cette carte est activée : vous pouvez ajouter 1 carte "Recette" depuis votre Deck ou Cimetière à votre main. Une fois par tour : vous pouvez placer 1 Monstre Rituel depuis votre main au-dessous du Deck ; piochez 1 carte. Une fois par tour, durant votre End Phase : vous pouvez cibler 2 cartes (une carte "Recette" incluse) dans votre Cimetière ; placez-les au-dessous de votre Deck dans l'ordre de votre choix, puis piochez 1 carte. Vous ne pouvez activer qu'1 "Restaurant de Nouvelles "À Table"" par tour.
+  it: |-
+    Quando questa carta viene attivata: puoi aggiungere 1 carta "Ricetta" dal tuo Deck o Cimitero alla tua mano. Una volta per turno: puoi mettere 1 Mostro Rituale dalla tua mano in fondo al Deck; pesca 1 carta. Una volta per turno, durante la tua End Phase: puoi scegliere come bersaglio 2 carte nel tuo Cimitero, compresa una carta "Ricetta"; mettile in fondo al tuo Deck in qualsiasi ordine, poi pesca 1 carta. Puoi attivare solo 1 "Ristorante Nouvelles "À Table"" per turno.
+  pt: |-
+    Quando este card for ativado: você pode adicionar 1 card "Receita" do seu Deck ou Cemitério à sua mão. Uma vez por turno: você pode colocar 1 Monstro de Ritual da sua mão no fundo do Deck; compre 1 card. Uma vez por turno, durante sua Fase Final: você pode escolher 2 cards no seu Cemitério, incluindo um card "Receita"; coloque-os no fundo do seu Deck em qualquer ordem e, depois, compre 1 card. Você só pode ativar 1 "Restaurante Nouvelles "À Table"" por turno.
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：このカードの発動時の効果処理として、自分のデッキ・墓地から「レシピ」カード１枚を選んで手札に加える事ができる。②：１ターンに１度、手札から儀式モンスター１体をデッキの一番下に戻して発動できる。自分はデッキから１枚ドローする。③：自分エンドフェイズに、「レシピ」カードを含む自分の墓地のカード２枚を対象として発動できる。そのカードを好きな順番でデッキの下に戻す。その後、自分はデッキから１枚ドローする。
   ko:
