--- a/data/cards/26223582.yaml
+++ b/data/cards/26223582.yaml
@@ -2,11 +2,11 @@ konami_id: 18739
 password: 26223582
 name:
   en: Buerillabaisse de Nouvelles
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Buerillabaisse der Nouvelles
+  es: Buerllabesa de Nouvelles
+  fr: Buerillabaisse de Nouvelles
+  it: Buerillabaisse de Nouvelles
+  pt: Buerillabaisse de Nouvelles
   ja: ブエリヤベース・ド・ヌーベルズ
   ja_romaji: Bueriyabēsu Do Nūberuzu
   ko:
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     You can Ritual Summon this card with a "Recipe" card. If this card is Special Summoned: You can excavate the top 5 cards of your Deck, and if you do, you can add 1 excavated "Nouvelles" card to your hand, also shuffle the rest into the Deck. When a card or effect is activated that targets this card on the field, or when this card is targeted for an attack (Quick Effect): You can Tribute this card and 1 Attack Position monster on either field, and if you do, Special Summon 1 Level 2 or 3 "Nouvelles" Ritual Monster from your hand or Deck. You can only use each effect of "Buerillabaisse de Nouvelles" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Du kannst diese Karte mit einer „Rezept“-Karte als Ritualbeschwörung beschwören. Falls diese Karte als Spezialbeschwörung beschworen wird: Du kannst die obersten 5 Karten deines Decks ausgraben und falls du dies tust, kannst du deiner Hand 1 ausgegrabene „Nouvelles“-Karte hinzufügen, zusätzlich mische die restlichen ins Deck. Wenn eine Karte oder ein Effekt aktiviert wird, die oder der diese Karte auf dem Spielfeld als Ziel wählt, oder wenn diese Karte als Ziel für einen Angriff gewählt wird (Schnelleffekt): Du kannst diese Karte und 1 Monster in Angriffsposition auf einer beliebigen Spielfeldseite als Tribut anbieten und falls du dies tust, beschwöre 1 „Nouvelles“-Ritualmonster der Stufe 2 oder 3 als Spezialbeschwörung von deiner Hand oder deinem Deck. Du kannst jeden Effekt von „Buerillabaisse der Nouvelles“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Puedes Invocar esta carta por Ritual con una carta "Receta". Si esta carta es Invocada de Modo Especial: puedes excavar las 5 cartas de la parte superior de tu Deck y, si lo haces, puedes añadir a tu mano 1 carta "Nouvelles" excavada, y además barajar el resto al Deck. Cuando es activada una carta o efecto que selecciona esta carta en el Campo, o cuando esta carta es seleccionada para un ataque (Efecto Rápido): puedes Sacrificar esta carta y 1 monstruo en Posición de Ataque en cualquier Campo y, si lo haces, Invoca de Modo Especial, desde tu mano o Deck, 1 Monstruo de Ritual "Nouvelles" de Nivel 2 o 3. Sólo puedes usar cada efecto de "Buerllabesa de Nouvelles" una vez por turno.
+  fr: |-
+    Vous pouvez Invoquer Rituellement cette carte avec une carte "Recette". Si cette carte est Invoquée Spécialement : vous pouvez dévoiler les 5 cartes du dessus de votre Deck, et si vous le faites, vous pouvez ajouter 1 carte "Nouvelles" dévoilée à votre main, et aussi, mélangez les cartes restantes dans le Deck. Lorsqu'une carte ou un effet qui cible cette carte sur le Terrain est activé, ou lorsque cette carte est ciblée par une attaque (Effet Rapide) : vous pouvez Sacrifier cette carte et 1 monstre en Position d'Attaque sur l'un des Terrains, et si vous le faites, Invoquez Spécialement 1 Monstre Rituel "Nouvelles" de Niveau 2 ou 3 depuis votre main ou Deck. Vous ne pouvez utiliser chaque effet de "Buerillabaisse de Nouvelles" qu'une fois par tour.
+  it: |-
+    Puoi Evocare tramite Rituale questa carta con una carta "Ricetta". Se questa carta viene Evocata Specialmente: puoi dissotterrare le prime 5 carte del tuo Deck e, se lo fai, puoi aggiungere 1 carta "Nouvelles" dissotterrata alla tua mano, inoltre mischia il resto nel Deck. Quando viene attivata una carta o un effetto che sceglie come bersaglio questa carta sul Terreno, o quando questa carta viene scelta come bersaglio per un attacco (Effetto Rapido): puoi offrire come Tributo questa carta e 1 mostro in Posizione di Attacco su qualsiasi Terreno e, se lo fai, Evoca Specialmente 1 Mostro Rituale "Nouvelles" di Livello 2 o 3 dalla tua mano o Deck. Puoi utilizzare ogni effetto di "Buerillabaisse de Nouvelles" una sola volta per turno.
+  pt: |-
+    Você pode Invocar este card por Invocação-Ritual com um card "Receita". Se este card for Invocado por Invocação-Especial: você pode escavar os 5 cards do topo do seu Deck e, se isso acontecer, você pode adicionar 1 card "Nouvelles" escavado à sua mão e, além disso, embaralhe o resto no Deck. Quando um card ou efeito for ativado que escolha este card no campo como alvo, ou quando este card for alvo de um ataque (Efeito Rápido): você pode oferecer como Tributo este card e 1 monstro em Posição de Ataque em qualquer campo e, se isso acontecer, Invoque por Invocação-Especial 1 Monstro de Ritual "Nouvelles" de Nível 2 ou 3 da sua mão ou do Deck. Você só pode usar cada efeito de "Buerillabaisse de Nouvelles" uma vez por turno.
   ja: |-
     「レシピ」カードにより降臨。このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが特殊召喚に成功した場合に発動できる。自分のデッキの上からカードを５枚めくる。その中から「ヌーベルズ」カード１枚を選んで手札に加える事ができる。残りはデッキに戻す。②：フィールドのこのカードが攻撃・効果の対象になった時に発動できる。このカードと自分・相手フィールドの攻撃表示モンスター１体をリリースし、手札・デッキからレベル２・３の「ヌーベルズ」儀式モンスター１体を特殊召喚する。
   ko:
