--- a/data/cards/28168628.yaml
+++ b/data/cards/28168628.yaml
@@ -2,11 +2,11 @@ konami_id: 18733
 password: 28168628
 name:
   en: Rock of the Vanquisher
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Fels des Bezwingers
+  es: Piedra del Derrotador
+  fr: Rocher du Vainqueur
+  it: Roccia dello Sgominatore
+  pt: Rocha do Aniquilador
   ja: <ruby>闘神の虚像<rt>ロック・オブ・ヴァンキッシャー</rt></ruby>
   ja_romaji: Rokku Obu Vankisshā
   ko:
@@ -20,11 +20,36 @@ text:
     ● Special Summon 1 "Vanquish Soul" monster from your hand.
     ● Add 1 "Vanquish Soul" monster from your GY to your hand.
     You can only use this effect of "Rock of the Vanquisher" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    1 „Bezwingerseele“-Monster
+    Kann nicht als Linkmaterial verwendet werden. Solange du ein „Bezwingerseele“-Monster kontrollierst, können Monster deines Gegners nur Monster mit den höchsten ATK, die du kontrollierst, (bei Gleichstand bestimmt er) als Ziel für Angriffe wählen. Während der Main Phase (Schnelleffekt): Du kannst 1 dieser Effekte aktivieren;
+    ● Beschwöre 1 „Bezwingerseele“-Monster als Spezialbeschwörung von deiner Hand.
+    ● Füge deiner Hand 1 „Bezwingerseele“-Monster von deinem Friedhof hinzu.
+    Du kannst diesen Effekt von „Fels des Bezwingers“ nur einmal pro Spielzug verwenden.
+  es: |-
+    1 monstruo "Derrota Almas"
+    No puede ser usado como Material de Enlace. Mientras controles un monstruo "Derrota Almas", los monstruos de tu adversario sólo pueden seleccionar para ataques los monstruos con el mayor ATK que tú controles (si hay empate, elige él). Durante la Main Phase (Efecto Rápido): puedes activar 1 de estos efectos;
+    ● Invoca de Modo Especial, desde tu mano, 1 monstruo "Derrota Almas".
+    ● Añade a tu mano 1 monstruo "Derrota Almas" en tu Cementerio.
+    Sólo puedes usar este efecto de "Piedra del Derrotador" una vez por turno.
+  fr: |-
+    1 monstre "Âme du Vainqueur"
+    Non utilisable comme Matériel Lien. Tant que vous contrôlez un monstre "Âme du Vainqueur", les monstres de votre adversaire ne peuvent cibler que les monstres que vous contrôlez avec la plus haute ATK (en cas d'égalité, il choisit) avec une attaque. Durant la Main Phase (Effet Rapide) : vous pouvez activer 1 de ces effets ;
+    ● Invoquez Spécialement 1 monstre "Âme du Vainqueur" depuis votre main.
+    ● Ajoutez 1 monstre "Âme du Vainqueur" depuis votre Cimetière à votre main.
+    Vous ne pouvez utiliser cet effet de "Rocher du Vainqueur" qu'une fois par tour.
+  it: |-
+    1 mostro "Sgomina Anima"
+    Non può essere utilizzato come Materiale Link. Mentre controlli un mostro "Sgomina Anima", i mostri del tuo avversario possono scegliere come bersaglio per gli attacchi solo mostri che controlli con l'ATK più alto (in caso di parità, sceglie lui). Durante la Main Phase (Effetto Rapido): puoi attivare 1 di questi effetti;
+    ● Evoca Specialmente 1 mostro "Sgomina Anima" dalla tua mano.
+    ● Aggiungi 1 mostro "Sgomina Anima" dal tuo Cimitero alla tua mano.
+    Puoi utilizzare questo effetto di "Roccia dello Sgominatore" una sola volta per turno.
+  pt: |-
+    1 monstro "Alma Aniquiladora"
+    Não pode ser usado como Matéria Link. Enquanto você controlar um monstro "Alma Aniquiladora", os monstros do seu oponente só podem escolher monstros que você controla com o maior ATK (em caso de empate, ele seleciona) como alvo de ataques. Durante a Fase Principal (Efeito Rápido): você pode ativar 1 desses efeitos;
+    ● Invoque por Invocação-Especial 1 monstro "Alma Aniquiladora" da sua mão.
+    ● Adicione 1 monstro "Alma Aniquiladora" do seu Cemitério à sua mão.
+    Você só pode usar este efeito de "Rocha do Aniquilador" uma vez por turno.
   ja: |-
     「ＶＳ」モンスター１体
     このカードはリンク素材にできない。このカード名の②の効果は１ターンに１度しか使用できない。①：自分フィールドに「ＶＳ」モンスターが存在する限り、自分フィールドの攻撃力が一番高いモンスターしか相手は攻撃対象に選択できない。②：自分・相手のメインフェイズに、以下の効果から１つを選択して発動できる。●手札から「ＶＳ」モンスター１体を特殊召喚する。●自分の墓地から「ＶＳ」モンスター１体を選んで手札に加える。
