--- a/data/cards/29302858.yaml
+++ b/data/cards/29302858.yaml
@@ -2,11 +2,11 @@ konami_id: 18727
 password: 29302858
 name:
   en: Vanquish Soul Razen
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Bezwingerseele Razen
+  es: Derrota Almas Razen
+  fr: Âme du Vainqueur Razen
+  it: Sgomina Anima Razen
+  pt: Alma Aniquiladora Razen
   ja: <ruby>ＶＳ<rt>ヴァンキッシュ・ソウル</rt></ruby> ラゼン
   ja_romaji: Vankisshu Souru Razen
   ko:
@@ -19,11 +19,31 @@ text:
     ● FIRE: This card cannot be destroyed by card effects this turn.
     ● FIRE & DARK: Destroy all other monsters in this card's column.
     You can only use each effect of "Vanquish Soul Razen" once per turn, and cannot activate more than 1 in the same Chain.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Falls diese Karte als Normal- oder Spezialbeschwörung beschworen wird: Du kannst deiner Hand 1 „Bezwingerseele“-Nichtkrieger-Monster von deinem Deck hinzufügen. (Schnelleffekt): Du kannst 1 dieser Effekte aktivieren, indem du ein oder mehr Monster mit den aufgeführten Eigenschaften in deiner Hand vorzeigst;
+    ● FEUER: Diese Karte kann in diesem Spielzug nicht durch Karteneffekte zerstört werden.
+    ● FEUER und FINSTERNIS: Zerstöre alle anderen Monster in der Spalte dieser Karte.
+    Du kannst jeden Effekt von „Bezwingerseele Razen“ nur einmal pro Spielzug verwenden und du kannst nicht mehr als 1 in derselben Kette aktivieren.
+  es: |-
+    Si esta carta es Invocada de Modo Normal o Especial: puedes añadir a tu mano 1 monstruo "Derrota Almas" que no sea Guerrero en tu Deck. (Efecto Rápido): puedes activar 1 de estos efectos, mostrando uno o más monstruos en tu mano con el o los Atributos listados;
+    ● FUEGO: Esta carta no puede ser destruida por efectos de cartas este turno.
+    ● FUEGO & OSCURIDAD: Destruye todos los demás monstruos en la columna de esta carta.
+    Sólo puedes usar cada efecto de "Derrota Almas Razen" una vez por turno, y no puedes activar más de 1 en la misma Cadena.
+  fr: |-
+    Si cette carte est Invoquée Normalement ou Spécialement : vous pouvez ajouter 1 monstre "Âme du Vainqueur" non-Guerrier depuis votre Deck à votre main. (Effet Rapide) : vous pouvez activer 1 de ces effets, en révélant un ou plusieurs monstres dans votre main avec les Attributs listés ;
+    ● FEU : Ce tour, cette carte ne peut pas être détruite par des effets de carte.
+    ● FEU et TÉNÈBRES : Détruisez tous les autres monstres dans la colonne de cette carte.
+    Vous ne pouvez utiliser chaque effet de "Âme du Vainqueur Razen" qu'une fois par tour, et ne pouvez en activer que max. 1 dans la même Chaîne.
+  it: |-
+    Se questa carta viene Evocata Normalmente o Specialmente: puoi aggiungere 1 mostro "Sgomina Anima" non-Guerriero dal tuo Deck alla tua mano. (Effetto Rapido): puoi attivare 1 di questi effetti, rivelando uno o più mostri nella tua mano con gli Attributi indicati;
+    ● FUOCO: Questa carta non può essere distrutta dagli effetti delle carte in questo turno.
+    ● FUOCO & OSCURITÀ: Distruggi tutti gli altri mostri nella colonna di questa carta.
+    Puoi utilizzare ogni effetto di "Sgomina Anima Razen" una sola volta per turno, e non puoi attivarne più di 1 nella stessa Catena.
+  pt: |-
+    Se este card for Invocado por Invocação-Normal ou Especial: você pode adicionar 1 monstro "Alma Aniquiladora" não-Guerreiro do seu Deck à sua mão. (Efeito Rápido): você pode ativar 1 desses efeitos ao revelar um ou mais monstros na sua mão com o(s) Atributo(s) listado(s);
+    ● FOGO: Neste turno, este card não pode ser destruído por efeitos de card.
+    ● FOGO & TREVAS: Destrua todos os outros monstros na coluna deste card.
+    Você só pode usar cada efeito de "Alma Aniquiladora Razen" uma vez por turno e não pode ativar mais que 1 na mesma Corrente.
   ja: |-
     このカード名の①②の効果は、それぞれ１ターンに１度しか使用できず、同一チェーン上では発動できない。①：このカードが召喚・特殊召喚に成功した場合に発動できる。デッキから戦士族以外の「ＶＳ」モンスター１体を手札に加える。②：自分・相手ターンに、以下から１つ選択し、その属性の手札のモンスターを１体ずつ相手に見せて発動できる。●炎：このターン、このカードは効果では破壊されない。●炎・闇：このカードと同じ縦列の他のモンスターを全て破壊する。
   ko:
