--- a/data/cards/44508094.yaml
+++ b/data/cards/44508094.yaml
@@ -59,6 +59,8 @@ images:
 - index: 2
   image: StardustDragon-DUPO-EN-UR-LE.png
   illustration: StardustDragon-OW-2.png
+- index: 3
+  image: StardustDragon-CCC1-JP-NPR.png
 sets:
   en:
   - set_number: CT05-EN001
