--- a/data/cards/52495649.yaml
+++ b/data/cards/52495649.yaml
@@ -2,11 +2,11 @@ konami_id: 18743
 password: 52495649
 name:
   en: Balameuniere de Nouvelles
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Balameuniere der Nouvelles
+  es: Balameuniere de Nouvelles
+  fr: Balameunière de Nouvelles
+  it: Balameuniere de Nouvelles
+  pt: Balameuniere de Nouvelles
   ja: バラムニエル・ド・ヌーベルズ
   ja_romaji: Baramunieru Do Nūberuzu
   ko:
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     You can Ritual Summon this card with a "Recipe" card. If this card is Special Summoned: You can add 1 "Nouvelles" or "Recipe" card from your Deck to your hand. You can target 1 Attack Position monster your opponent controls; Tribute it, and if you do, Special Summon 1 Level 6 "Nouvelles" Ritual Monster from your hand or Deck. This is a Quick Effect if this card was Special Summoned by the effect of a "Nouvelles" monster. You can only use each effect of "Balameuniere de Nouvelles" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Du kannst diese Karte mit einer „Rezept“-Karte als Ritualbeschwörung beschwören. Falls diese Karte als Spezialbeschwörung beschworen wird: Du kannst deiner Hand 1 „Nouvelles“- oder „Rezept“-Karte von deinem Deck hinzufügen. Du kannst 1 Monster in Angriffsposition wählen, das dein Gegner kontrolliert; biete es als Tribut an und falls du dies tust, beschwöre 1 „Nouvelles“-Ritualmonster der Stufe 6 als Spezialbeschwörung von deiner Hand oder deinem Deck. Dies ist ein Schnelleffekt, falls diese Karte durch den Effekt eines „Nouvelles“-Monsters als Spezialbeschwörung beschworen wurde. Du kannst jeden Effekt von „Balameuniere der Nouvelles“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Puedes Invocar esta carta por Ritual con una carta "Receta". Si esta carta es Invocada de Modo Especial: puedes añadir a tu mano 1 carta "Nouvelles" o "Receta" en tu Deck. Puedes seleccionar 1 monstruo en Posición de Ataque que controle tu adversario; Sacrifícalo y, si lo haces, Invoca de Modo Especial, desde tu mano o Deck, 1 Monstruo de Ritual "Nouvelles" de Nivel 6. Este es un Efecto Rápido si esta carta fue Invocada de Modo Especial por efecto de un monstruo "Nouvelles". Sólo puedes usar cada efecto de "Balameuniere de Nouvelles" una vez por turno.
+  fr: |-
+    Vous pouvez Invoquer Rituellement cette carte avec une carte "Recette". Si cette carte est Invoquée Spécialement : vous pouvez ajouter 1 carte "Nouvelles" ou "Recette" depuis votre Deck à votre main. Vous pouvez cibler 1 monstre en Position d'Attaque contrôlé par votre adversaire ; Sacrifiez-le, et si vous le faites, Invoquez Spécialement 1 Monstre Rituel "Nouvelles" de Niveau 6 depuis votre main ou Deck. Ceci est un Effet Rapide si cette carte a été Invoquée Spécialement par l'effet d'un monstre "Nouvelles". Vous ne pouvez utiliser chaque effet de "Balameunière de Nouvelles" qu'une fois par tour.
+  it: |-
+    Puoi Evocare tramite Rituale questa carta con una carta "Ricetta". Se questa carta viene Evocata Specialmente: puoi aggiungere 1 carta "Nouvelles" o "Ricetta" dal tuo Deck alla tua mano. Puoi scegliere come bersaglio 1 mostro in Posizione di Attacco controllato dal tuo avversario; offrilo come Tributo e, se lo fai, Evoca Specialmente 1 Mostro Rituale "Nouvelles" di Livello 6 dalla tua mano o Deck. Questo è un Effetto Rapido se questa carta è stata Evocata Specialmente dall'effetto di un mostro "Nouvelles". Puoi utilizzare ogni effetto di "Balameuniere de Nouvelles" una sola volta per turno.
+  pt: |-
+    Você pode Invocar este card por Invocação-Ritual com um card "Receita". Se este card for Invocado por Invocação-Especial: você pode adicionar 1 card "Nouvelles" ou "Receita" do seu Deck à sua mão. Você pode escolher 1 monstro em Posição de Ataque que seu oponente controla; ofereça-o como Tributo e, se isso acontecer, Invoque por Invocação-Especial 1 Monstro de Ritual "Nouvelles" de Nível 6 da sua mão ou do Deck. Este é um Efeito Rápido se este card foi Invocado por Invocação-Especial pelo efeito de um monstro "Nouvelles". Você só pode usar cada efeito de "Balameuniere de Nouvelles" uma vez por turno.
   ja: |-
     「レシピ」カードにより降臨。このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが特殊召喚に成功した場合に発動できる。「ヌーベルズ」カードまたは「レシピ」カード１枚をデッキから手札に加える。②：相手フィールドの攻撃表示モンスター１体を対象として発動できる。そのモンスターをリリースし、手札・デッキからレベル６の「ヌーベルズ」儀式モンスター１体を特殊召喚する。このカードが「ヌーベルズ」モンスターの効果で特殊召喚されている場合、この効果は相手ターンでも発動できる。
   ko:
