--- a/data/cards/53330789.yaml
+++ b/data/cards/53330789.yaml
@@ -2,11 +2,11 @@ konami_id: 18737
 password: 53330789
 name:
   en: Vanquish Soul Trinity Burst
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Bezwingerseelen-Dreifachangriff
+  es: Derrota Almas Estallido de Tríada
+  fr: Âme du Vainqueur Coup de la Trinité
+  it: Sgomina Anima Trinità Esplosione
+  pt: Explosão da Trindade da Alma Aniquiladora
   ja: <ruby>ＶＳ<rt>ヴァンキッシュ・ソウル</rt></ruby> トリニティ・バースト
   ja_romaji: Vankisshu Souru Toriniti Bāsuto
   ko:
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     Target 1 "Vanquish Soul" monster you control; Special Summon up to 2 "Vanquish Soul" monsters from your hand, with different names from each other, neither of which has the same original Attribute as the targeted monster (but negate their effects and return them to the hand during the End Phase), then you can return to the hand all cards your opponent controls that are in the same columns as the targeted monster you control and the monster(s) Special Summoned by this effect. You can only activate 1 "Vanquish Soul Trinity Burst" per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Wähle 1 „Bezwingerseele“-Monster, das du kontrollierst; beschwöre bis zu 2 „Bezwingerseele“-Monster mit unterschiedlichen Namen voneinander, von denen keins dieselbe Grund-Eigenschaft wie das als Ziel gewählte Monster hat, als Spezialbeschwörung von deiner Hand (aber annulliere ihre Effekte und gib sie während der End Phase auf die Hand zurück), dann kannst du alle Karten, die dein Gegner kontrolliert und die in denselben Spalten wie das als Ziel gewählte Monster, das du kontrollierst, und die durch diesen Effekt als Spezialbeschwörung beschworenen Monster liegen, auf die Hand zurückgeben. Du kannst nur 1 „Bezwingerseelen-Dreifachangriff“ pro Spielzug aktivieren.
+  es: |-
+    Selecciona 1 monstruo "Derrota Almas" que tú controles; Invoca de Modo Especial, desde tu mano, hasta 2 monstruos "Derrota Almas" con nombres diferentes entre sí, y ninguno con el mismo Atributo original que el monstruo seleccionado (pero niega sus efectos y devuélvelos a la mano durante la End Phase), y después puedes devolver a la mano todas las cartas que controle tu adversario que estén en las mismas columnas que el monstruo seleccionado que tú controlas y el o los monstruos Invocados de Modo Especial por este efecto. Sólo puedes activar 1 "Derrota Almas Estallido de Tríada" por turno.
+  fr: |-
+    Ciblez 1 monstre "Âme du Vainqueur" que vous contrôlez ; Invoquez Spécialement max. 2 monstres "Âme du Vainqueur" depuis votre main, de noms différents l'un de l'autre, aucun n'ayant le même Attribut d'origine que le monstre ciblé (mais annulez leurs effets et renvoyez-les à la main durant la End Phase), puis vous pouvez renvoyer à la main toutes les cartes contrôlées par votre adversaire qui sont dans les mêmes colonnes que le monstre ciblé que vous contrôlez et les monstres Invoqués Spécialement par cet effet. Vous ne pouvez activer qu'1 "Âme du Vainqueur Coup de la Trinité" par tour.
+  it: |-
+    Scegli come bersaglio 1 mostro "Sgomina Anima" che controlli; Evoca Specialmente fino a 2 mostri "Sgomina Anima" dalla tua mano, con nomi diversi l'uno dall'altro, nessuno dei quali ha lo stesso Attributo originale del mostro scelto come bersaglio (ma annulla i loro effetti e falli ritornare nella mano durante la End Phase), poi puoi far ritornare nella mano tutte le carte controllate dal tuo avversario che sono nelle stesse colonne del mostro scelto come bersaglio che controlli e dei mostri Evocati Specialmente da questo effetto. Puoi attivare solo 1 "Sgomina Anima Trinità Esplosione" per turno.
+  pt: |-
+    Escolha 1 monstro "Alma Aniquiladora" que você controla; Invoque por Invocação-Especial até 2 monstros "Alma Aniquiladora" da sua mão, com nomes diferentes um do outro, nenhum dos quais tenha o mesmo Atributo original que o do monstro alvo (mas negue seus efeitos e devolva-os para a mão durante a Fase Final) e, depois, você pode devolver para a mão todos os cards que seu oponente controla que estiverem na mesma coluna que a do monstro alvo que você controla e do(s) monstro(s) Invocado(s) por Invocação-Especial por este efeito. Você só pode ativar 1 "Explosão da Trindade da Alma Aniquiladora" por turno.
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：自分フィールドの「ＶＳ」モンスター１体を対象として発動できる。そのモンスターとは元々の属性が異なる「ＶＳ」モンスターを２体まで手札から効果を無効にして特殊召喚する（同名カードは１枚まで）。その後、対象の自分のモンスター及びこの効果で特殊召喚したモンスターの、正面の相手フィールドのカードを全て持ち主の手札に戻す事ができる。この効果で特殊召喚したモンスターはエンドフェイズに持ち主の手札に戻る。
   ko:
