--- a/data/cards/53618197.yaml
+++ b/data/cards/53618197.yaml
@@ -2,11 +2,11 @@ konami_id: 18740
 password: 53618197
 name:
   en: Confiras de Nouvelles
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Confiras der Nouvelles
+  es: Confiras de Nouvelles
+  fr: Confiras de Nouvelles
+  it: Confiras de Nouvelles
+  pt: Confiras de Nouvelles
   ja: コンフィラス・ド・ヌーベルズ
   ja_romaji: Konfirasu Do Nūberuzu
   ko:
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     You can Ritual Summon this card with a "Recipe" card. If this card is Special Summoned: You can target 1 Spell/Trap on the field; destroy it. When a card or effect is activated that targets this card on the field, or when this card is targeted for an attack (Quick Effect): You can Tribute this card and 1 Attack Position monster on either field, and if you do, Special Summon 1 Level 3 or 4 "Nouvelles" Ritual Monster from your hand or Deck. You can only use each effect of "Confiras de Nouvelles" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Du kannst diese Karte mit einer „Rezept“-Karte als Ritualbeschwörung beschwören. Falls diese Karte als Spezialbeschwörung beschworen wird: Du kannst 1 Zauber/Falle auf dem Spielfeld wählen; zerstöre ihn oder sie. Wenn eine Karte oder ein Effekt aktiviert wird, die oder der diese Karte auf dem Spielfeld als Ziel wählt, oder wenn diese Karte als Ziel für einen Angriff gewählt wird (Schnelleffekt): Du kannst diese Karte und 1 Monster in Angriffsposition auf einer beliebigen Spielfeldseite als Tribut anbieten und falls du dies tust, beschwöre 1 „Nouvelles“-Ritualmonster der Stufe 3 oder 4 als Spezialbeschwörung von deiner Hand oder deinem Deck. Du kannst jeden Effekt von „Confiras der Nouvelles“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Puedes Invocar esta carta por Ritual con una carta "Receta". Si esta carta es Invocada de Modo Especial: puedes seleccionar 1 Mágica/Trampa en el Campo; destrúyela. Cuando es activada una carta o efecto que selecciona esta carta en el Campo, o cuando esta carta es seleccionada para un ataque (Efecto Rápido): puedes Sacrificar esta carta y 1 monstruo en Posición de Ataque en cualquier Campo y, si lo haces, Invoca de Modo Especial, desde tu mano o Deck, 1 Monstruo de Ritual "Nouvelles" de Nivel 3 o 4. Sólo puedes usar cada efecto de "Confiras de Nouvelles" una vez por turno.
+  fr: |-
+    Vous pouvez Invoquer Rituellement cette carte avec une carte "Recette". Si cette carte est Invoquée Spécialement : vous pouvez cibler 1 Magie/Piège sur le Terrain ; détruisez-le. Lorsqu'une carte ou un effet qui cible cette carte sur le Terrain est activé, ou lorsque cette carte est ciblée par une attaque (Effet Rapide) : vous pouvez Sacrifier cette carte et 1 monstre en Position d'Attaque sur l'un des Terrains, et si vous le faites, Invoquez Spécialement 1 Monstre Rituel "Nouvelles" de Niveau 3 ou 4 depuis votre main ou Deck. Vous ne pouvez utiliser chaque effet de "Confiras de Nouvelles" qu'une fois par tour.
+  it: |-
+    Puoi Evocare tramite Rituale questa carta con una carta "Ricetta". Se questa carta viene Evocata Specialmente: puoi scegliere come bersaglio 1 Magia/Trappola sul Terreno; distruggila. Quando viene attivata una carta o un effetto che sceglie come bersaglio questa carta sul Terreno, o quando questa carta viene scelta come bersaglio per un attacco (Effetto Rapido): puoi offrire come Tributo questa carta e 1 mostro in Posizione di Attacco su qualsiasi Terreno e, se lo fai, Evoca Specialmente 1 Mostro Rituale "Nouvelles" di Livello 3 o 4 dalla tua mano o Deck. Puoi utilizzare ogni effetto di "Confiras de Nouvelles" una sola volta per turno.
+  pt: |-
+    Você pode Invocar este card por Invocação-Ritual com um card "Receita". Se este card for Invocado por Invocação-Especial: você pode escolher 1 Magia/Armadilha no campo; destrua-a. Quando um card ou efeito for ativado que escolha este card no campo como alvo, ou quando este card for alvo de um ataque (Efeito Rápido): você pode oferecer como Tributo este card e 1 monstro em Posição de Ataque em qualquer campo e, se isso acontecer, Invoque por Invocação-Especial 1 Monstro de Ritual "Nouvelles" de Nível 3 ou 4 da sua mão ou do Deck. Você só pode usar cada efeito de "Confiras de Nouvelles" uma vez por turno.
   ja: |-
     「レシピ」カードにより降臨。このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが特殊召喚に成功した場合、フィールドの魔法・罠カード１枚を対象として発動できる。そのカードを破壊する。②：フィールドのこのカードが攻撃・効果の対象になった時に発動できる。このカードと自分・相手フィールドの攻撃表示モンスター１体をリリースし、手札・デッキからレベル３・４の「ヌーベルズ」儀式モンスター１体を特殊召喚する。
   ko:
