--- a/data/cards/55688914.yaml
+++ b/data/cards/55688914.yaml
@@ -2,11 +2,11 @@ konami_id: 18731
 password: 55688914
 name:
   en: Vanquish Soul Pluton HG
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Bezwingerseele Pluton HG
+  es: Derrota Almas Plutón HG
+  fr: Âme du Vainqueur Pluton HG
+  it: Sgomina Anima Pluton HG
+  pt: Alma Aniquiladora Pluton HG
   ja: <ruby>ＶＳ<rt>ヴァンキッシュ・ソウル</rt></ruby> プルトン<ruby>Ｈ<rt>エイチ</rt></ruby><ruby>Ｇ<rt>ジー</rt></ruby>
   ja_romaji: Vankisshu Souru Puruton Eichi Jī
   ko:
@@ -19,11 +19,31 @@ text:
     ● FIRE: This card gains 3000 DEF until the end of this turn.
     ● DARK & EARTH: This card gains 3000 ATK until the end of this turn.
     You can only use each effect of "Vanquish Soul Pluton HG" once per turn, and cannot activate more than 1 in the same Chain.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Während des Spielzugs deines Gegners, falls du keine Monster oder nur „Bezwingerseele“-Monster in deiner Main-Monsterzone kontrollierst (Schnelleffekt): Du kannst diese Karte als Spezialbeschwörung von deiner Hand beschwören. (Schnelleffekt): Du kannst 1 dieser Effekte aktivieren, indem du ein oder mehr Monster mit den aufgeführten Eigenschaften in deiner Hand vorzeigst;
+    ● FEUER: Diese Karte erhält bis zum Ende dieses Spielzugs 3000 DEF.
+    ● FINSTERNIS und ERDE: Diese Karte erhält bis zum Ende dieses Spielzugs 3000 ATK.
+    Du kannst jeden Effekt von „Bezwingerseele Pluton HG“ nur einmal pro Spielzug verwenden und du kannst nicht mehr als 1 in derselben Kette aktivieren.
+  es: |-
+    Durante el turno de tu adversario, si no controlas monstruos, o solo monstruos "Derrota Almas", en tu Zona de Monstruos Principal (Efecto Rápido): puedes Invocar esta carta de Modo Especial desde tu mano. (Efecto Rápido): puedes activar 1 de estos efectos, mostrando uno o más monstruos en tu mano con el o los Atributos listados;
+    ● FUEGO: Esta carta gana 3000 DEF hasta el final de este turno.
+    ● OSCURIDAD & TIERRA: Esta carta gana 3000 ATK hasta el final de este turno.
+    Sólo puedes usar cada efecto de "Derrota Almas Plutón HG" una vez por turno, y no puedes activar más de 1 en la misma Cadena.
+  fr: |-
+    Durant le tour de votre adversaire, si vous ne contrôlez aucun monstre ou uniquement des monstres "Âme du Vainqueur" dans votre Zone Monstre Main (Effet Rapide) : vous pouvez Invoquer Spécialement cette carte depuis votre main. (Effet Rapide) : vous pouvez activer 1 de ces effets, en révélant un ou plusieurs monstres dans votre main avec les Attributs listés ;
+    ● FEU : Jusqu'à la fin de ce tour, cette carte gagne 3000 DEF.
+    ● TÉNÈBRES et TERRE : Jusqu'à la fin de ce tour, cette carte gagne 3000 ATK.
+    Vous ne pouvez utiliser chaque effet de "Âme du Vainqueur Pluton HG" qu'une fois par tour, et ne pouvez en activer que max. 1 dans la même Chaîne.
+  it: |-
+    Durante il turno del tuo avversario, se non controlli nessun mostro, o solo mostri "Sgomina Anima", nella tua Zona Mostri Main (Effetto Rapido): puoi Evocare Specialmente questa carta dalla tua mano. (Effetto Rapido): puoi attivare 1 di questi effetti, rivelando uno o più mostri nella tua mano con gli Attributi indicati;
+    ● FUOCO: Questa carta guadagna 3000 DEF fino alla fine di questo turno.
+    ● OSCURITÀ & TERRA: Questa carta guadagna 3000 ATK fino alla fine di questo turno.
+    Puoi utilizzare ogni effetto di "Sgomina Anima Pluton HG" una sola volta per turno, e non puoi attivarne più di 1 nella stessa Catena.
+  pt: |-
+    Durante o turno do seu oponente, se você não controlar nenhum monstro, ou controlar apenas monstros "Alma Aniquiladora", na sua Zona de Monstros Principal (Efeito Rápido): você pode Invocar este card por Invocação-Especial da sua mão. (Efeito Rápido): você pode ativar 1 desses efeitos ao revelar um ou mais monstros na sua mão com o(s) Atributo(s) listado(s);
+    ● FOGO: Este card ganha 3000 de DEF até o final deste turno.
+    ● TREVAS & TERRA: Este card ganha 3000 de ATK até o final deste turno.
+    Você só pode usar cada efeito de "Alma Aniquiladora Pluton HG" uma vez por turno e não pode ativar mais que 1 na mesma Corrente.
   ja: |-
     このカード名の①②の効果は、それぞれ１ターンに１度しか使用できず、同一チェーン上では発動できない。①：相手ターンに、自分のメインモンスターゾーンのモンスターが、存在しない場合または「ＶＳ」モンスターのみの場合に発動できる。このカードを手札から特殊召喚する。②：自分・相手ターンに、以下から１つ選択し、その属性の手札のモンスターを１体ずつ相手に見せて発動できる。●炎：このカードの守備力はターン終了時まで３０００アップする。●闇・地：このカードの攻撃力はターン終了時まで３０００アップする。
   ko:
