--- a/data/cards/66401502.yaml
+++ b/data/cards/66401502.yaml
@@ -2,11 +2,11 @@ konami_id: 18728
 password: 66401502
 name:
   en: Vanquish Soul Pantera
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Bezwingerseele Pantera
+  es: Derrota Almas Pantera
+  fr: Âme du Vainqueur Pantéra
+  it: Sgomina Anima Pantera
+  pt: Alma Aniquiladora Pantera
   ja: <ruby>ＶＳ<rt>ヴァンキッシュ・ソウル</rt></ruby> パンテラ
   ja_romaji: Vankisshu Souru Pantera
   ko:
@@ -19,11 +19,31 @@ text:
     ● EARTH: This card cannot be destroyed by battle this turn.
     ● EARTH & FIRE: Destroy all Spells/Traps in this card's column.
     You can only use each effect of "Vanquish Soul Pantera" once per turn, and cannot activate more than 1 in the same Chain.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Falls du keine Monster in deiner Main-Monsterzone kontrollierst: Du kannst diese Karte als Spezialbeschwörung von deiner Hand beschwören. (Schnelleffekt): Du kannst 1 dieser Effekte aktivieren, indem du ein oder mehr Monster mit den aufgeführten Eigenschaften in deiner Hand vorzeigst;
+    ● ERDE: Diese Karte kann in diesem Spielzug nicht durch Kampf zerstört werden.
+    ● ERDE und FEUER: Zerstöre alle Zauber/Fallen in der Spalte dieser Karte.
+    Du kannst jeden Effekt von „Bezwingerseele Pantera“ nur einmal pro Spielzug verwenden und du kannst nicht mehr als 1 in derselben Kette aktivieren.
+  es: |-
+    Si no controlas monstruos en tu Zona de Monstruos Principal: puedes Invocar esta carta de Modo Especial desde tu mano. (Efecto Rápido): puedes activar 1 de estos efectos, mostrando uno o más monstruos en tu mano con el o los Atributos listados;
+    ● TIERRA: Esta carta no puede ser destruida en batalla este turno.
+    ● TIERRA & FUEGO: Destruye todas las Mágicas/Trampas en la columna de esta carta.
+    Sólo puedes usar cada efecto de "Derrota Almas Pantera" una vez por turno, y no puedes activar más de 1 en la misma Cadena.
+  fr: |-
+    Si vous ne contrôlez aucun monstre dans votre Zone Monstre Main : vous pouvez Invoquer Spécialement cette carte depuis votre main. (Effet Rapide) : vous pouvez activer 1 de ces effets, en révélant un ou plusieurs monstres dans votre main avec les Attributs listés ;
+    ● TERRE : Ce tour, cette carte ne peut pas être détruite au combat.
+    ● TERRE et FEU : Détruisez tous les Magies/Pièges dans la colonne de cette carte.
+    Vous ne pouvez utiliser chaque effet de "Âme du Vainqueur Pantéra" qu'une fois par tour, et ne pouvez en activer que max. 1 dans la même Chaîne.
+  it: |-
+    Se non controlli nessun mostro nella tua Zona Mostri Main: puoi Evocare Specialmente questa carta dalla tua mano. (Effetto Rapido): puoi attivare 1 di questi effetti, rivelando uno o più mostri nella tua mano con gli Attributi indicati;
+    ● TERRA: Questa carta non può essere distrutta in battaglia in questo turno.
+    ● TERRA & FUOCO: Distruggi tutte le Magie/Trappole nella colonna di questa carta.
+    Puoi utilizzare ogni effetto di "Sgomina Anima Pantera" una sola volta per turno, e non puoi attivarne più di 1 nella stessa Catena.
+  pt: |-
+    Se você não controlar nenhum monstro na sua Zona de Monstros Principal: você pode Invocar este card por Invocação-Especial da sua mão. (Efeito Rápido): você pode ativar 1 desses efeitos ao revelar um ou mais monstros na sua mão com o(s) Atributo(s) listado(s);
+    ● TERRA: Este card não pode ser destruído em batalha neste turno.
+    ● TERRA & FOGO: Destrua todas as Magias/Armadilhas na coluna deste card.
+    Você só pode usar cada efeito de "Alma Aniquiladora Pantera" uma vez por turno e não pode ativar mais que 1 na mesma Corrente.
   ja: |-
     このカード名の①②の効果は、それぞれ１ターンに１度しか使用できず、同一チェーン上では発動できない。①：自分のメインモンスターゾーンにモンスターが存在しない場合に発動できる。このカードを手札から特殊召喚する。②：自分・相手ターンに、以下から１つ選択し、その属性の手札のモンスターを１体ずつ相手に見せて発動できる。●地：このターン、このカードは戦闘では破壊されない。●地・炎：このカードと同じ縦列の魔法・罠カードを全て破壊する。
   ko:
