--- a/data/cards/67523044.yaml
+++ b/data/cards/67523044.yaml
@@ -2,11 +2,11 @@ konami_id: 18725
 password: 67523044
 name:
   en: Ground Xeno
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Xeno-Zentrum
+  es: Punto de Impacto Xeno
+  fr: Point Xéno
+  it: Epicentro Xeno
+  pt: Marco Xeno
   ja: グラウンド・ゼノ
   ja_romaji: Guraundo Zeno
   ko:
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     Add 1 Dinosaur Tuner or Dinosaur Normal Monster from your Deck to your hand, then destroy 1 card in your hand. You can banish this card from your GY; Fusion Summon 1 Dinosaur Fusion Monster from your Extra Deck, using monsters from your hand or field as material. You can only use each effect of "Ground Xeno" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Füge deiner Hand 1 Dinosaurier-Empfänger oder Normales Dinosaurier-Monster von deinem Deck hinzu, dann zerstöre 1 Karte in deiner Hand. Du kannst diese Karte von deinem Friedhof verbannen; beschwöre 1 Dinosaurier-Fusionsmonster als Fusionsbeschwörung von deinem Extra Deck und verwende dafür Monster von deiner Hand oder Spielfeldseite als Material. Du kannst jeden Effekt von „Xeno-Zentrum“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Añade a tu mano 1 Cantante Dinosaurio o Monstruo Normal Dinosaurio en tu Deck, y después destruye 1 carta en tu mano. Puedes desterrar esta carta en tu Cementerio; Invoca por Fusión 1 Monstruo de Fusión Dinosaurio desde tu Deck Extra, usando monstruos en tu mano o Campo como material. Sólo puedes usar cada efecto de "Punto de Impacto Xeno" una vez por turno.
+  fr: |-
+    Ajoutez 1 Syntoniseur Dinosaure ou Monstre Normal Dinosaure depuis votre Deck à votre main, puis détruisez 1 carte dans votre main. Vous pouvez bannir cette carte depuis votre Cimetière ; Invoquez par Fusion 1 Monstre Fusion Dinosaure depuis votre Extra Deck, en utilisant des monstres depuis votre main ou Terrain comme Matériel. Vous ne pouvez utiliser chaque effet de "Point Xéno" qu'une fois par tour.
+  it: |-
+    Aggiungi 1 Tuner Dinosauro o Mostro Normale Dinosauro dal tuo Deck alla tua mano, poi distruggi 1 carta nella tua mano. Puoi bandire questa carta dal tuo Cimitero; Evoca tramite Fusione 1 Mostro Fusione Dinosauro dal tuo Extra Deck, utilizzando mostri dalla tua mano o Terreno come materiale. Puoi utilizzare ogni effetto di "Epicentro Xeno" una sola volta per turno.
+  pt: |-
+    Adicione 1 Regulador Dinossauro ou Monstro Normal Dinossauro do seu Deck à sua mão e, depois, destrua 1 card na sua mão. Você pode banir este card do seu Cemitério; Invoque por Invocação-Fusão 1 Monstro de Fusão Dinossauro do seu Deck Adicional, usando monstros da sua mão ou do campo como matéria. Você só pode usar cada efeito de "Marco Xeno" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：デッキから恐竜族チューナーまたは恐竜族の通常モンスター１体を手札に加える。その後、自分の手札を１枚選んで破壊する。②：墓地のこのカードを除外して発動できる。自分の手札・フィールドから、恐竜族の融合モンスターカードによって決められた融合素材モンスターを墓地へ送り、その融合モンスター１体をＥＸデッキから融合召喚する。
   ko:
