--- a/data/cards/67745632.yaml
+++ b/data/cards/67745632.yaml
@@ -2,11 +2,11 @@ konami_id: 18722
 password: 67745632
 name:
   en: Transcendosaurus Gigantozowler
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Transzendosaurier Gigantozauler
+  es: Gigantozowler Trascendosaurio
+  fr: Transcendosaure Gigantozouleur
+  it: Trascendosauro Gigantozowler
+  pt: Transcendossauro Gigantozowler
   ja: <ruby>超<rt>ちょう</rt></ruby><ruby>越<rt>えつ</rt></ruby><ruby>竜<rt>りゅう</rt></ruby>ギガントザウラー
   ja_romaji: Chōetsuryū Gigantozaurā
   ko:
@@ -17,11 +17,21 @@ text:
   en: |-
     1 Dinosaur monster + 1 Normal Monster
     If this card is Special Summoned: You can target 1 Dinosaur monster in your GY; add it to your hand, then, if this card was Special Summoned from the GY, you can destroy 2 cards (1 from your hand or field, and 1 your opponent controls). If this card is destroyed: You can shuffle 1 Normal Monster from your GY into the Deck, then you can Special Summon this card. You can only use each effect of "Transcendosaurus Gigantozowler" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    1 Dinosaurier-Monster + 1 Normales Monster
+    Falls diese Karte als Spezialbeschwörung beschworen wird: Du kannst 1 Dinosaurier-Monster in deinem Friedhof wählen; füge es deiner Hand hinzu, dann, falls diese Karte als Spezialbeschwörung vom Friedhof beschworen wurde, kannst du 2 Karten zerstören (1 von deiner Hand oder Spielfeldseite und 1, die dein Gegner kontrolliert). Falls diese Karte zerstört wird: Du kannst 1 Normales Monster von deinem Friedhof ins Deck mischen, dann kannst du diese Karte als Spezialbeschwörung beschwören. Du kannst jeden Effekt von „Transzendosaurier Gigantozauler“ nur einmal pro Spielzug verwenden.
+  es: |-
+    1 monstruo Dinosaurio + 1 Monstruo Normal
+    Si esta carta es Invocada de Modo Especial: puedes seleccionar 1 monstruo Dinosaurio en tu Cementerio; añádelo a tu mano y después, si esta carta fue Invocada de Modo Especial desde el Cementerio, puedes destruir 2 cartas (1 en tu mano o Campo y 1 que controle tu adversario). Si esta carta es destruida: puedes barajar al Deck 1 Monstruo Normal en tu Cementerio, y después puedes Invocar esta carta de Modo Especial. Sólo puedes usar cada efecto de "Gigantozowler Trascendosaurio" una vez por turno.
+  fr: |-
+    1 monstre Dinosaure + 1 Monstre Normal
+    Si cette carte est Invoquée Spécialement : vous pouvez cibler 1 monstre Dinosaure dans votre Cimetière ; ajoutez-le à votre main, puis, si cette carte a été Invoquée Spécialement depuis le Cimetière, vous pouvez détruire 2 cartes (1 depuis votre main ou Terrain, et 1 contrôlée par votre adversaire). Si cette carte est détruite : vous pouvez mélanger 1 Monstre Normal depuis votre Cimetière dans le Deck, puis vous pouvez Invoquer Spécialement cette carte. Vous ne pouvez utiliser chaque effet de "Transcendosaure Gigantozouleur" qu'une fois par tour.
+  it: |-
+    1 mostro Dinosauro + 1 Mostro Normale
+    Se questa carta viene Evocata Specialmente: puoi scegliere come bersaglio 1 mostro Dinosauro nel tuo Cimitero; aggiungilo alla tua mano, poi, se questa carta è stata Evocata Specialmente dal Cimitero, puoi distruggere 2 carte (1 dalla tua mano o Terreno e 1 controllata dal tuo avversario). Se questa carta viene distrutta: puoi mischiare 1 Mostro Normale dal tuo Cimitero nel Deck, poi puoi Evocare Specialmente questa carta. Puoi utilizzare ogni effetto di "Trascendosauro Gigantozowler" una sola volta per turno.
+  pt: |-
+    1 monstro Dinossauro + 1 Monstro Normal
+    Se este card for Invocado por Invocação-Especial: você pode escolher 1 monstro Dinossauro no seu Cemitério; adicione-o à sua mão e, depois, se este card foi Invocado por Invocação-Especial do Cemitério, você pode destruir 2 cards (1 da sua mão ou do campo e 1 que seu oponente controla). Se este card for destruído: você pode embaralhar no Deck 1 Monstro Normal do seu Cemitério e, depois, você pode Invocar este card por Invocação-Especial. Você só pode usar cada efeito de "Transcendossauro Gigantozowler" uma vez por turno.
   ja: |-
     恐竜族モンスター＋通常モンスター
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが特殊召喚に成功した場合、自分の墓地の恐竜族モンスター１体を対象として発動できる。そのモンスターを手札に加える。このカードが墓地から特殊召喚されていた場合、さらに自分の手札・フィールドのカード１枚と相手フィールドのカード１枚を選んで破壊できる。②：このカードが破壊された場合に発動できる。自分の墓地から通常モンスター１体を選んでデッキに戻す。その後、このカードを特殊召喚できる。
