--- a/data/cards/80738884.yaml
+++ b/data/cards/80738884.yaml
@@ -2,11 +2,11 @@ konami_id: 18738
 password: 80738884
 name:
   en: Vanquish Soul Calamity Caesar
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Bezwingerseelen-Katastrophen-Caesar
+  es: Derrota Almas César de la Calamidad
+  fr: Âme du Vainqueur Calamité César
+  it: Sgomina Anima Calamità Cesare
+  pt: Alma Aniquiladora César da Calamidade
   ja: <ruby>ＶＳ<rt>ヴァンキッシュ・ソウル</rt></ruby> <ruby>龍帝ノ槍<rt>カラミティ・カイザー</rt></ruby>
   ja_romaji: Vankisshu Souru Karamiti Kaizā
   ko:
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     When an opponent's Spell/Trap Card, or monster effect, is activated that targets a card(s) you control, while you control a "Vanquish Soul" monster: Negate the activation, and if you do, destroy that card, then you can inflict damage to your opponent equal to the ATK of 1 "Vanquish Soul" monster you control. You can only activate 1 "Vanquish Soul Calamity Caesar" per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Wenn eine Zauber-/Fallenkarte oder ein Monstereffekt eines Gegners aktiviert wird, die oder der eine oder mehr Karten als Ziel wählt, die du kontrollierst, solange du ein „Bezwingerseele“-Monster kontrollierst: Annulliere die Aktivierung und falls du dies tust, zerstöre jene Karte, dann kannst du deinem Gegner Schaden in Höhe der ATK von 1 „Bezwingerseele“-Monster zufügen, das du kontrollierst. Du kannst nur 1 „Bezwingerseelen-Katastrophen-Caesar“ pro Spielzug aktivieren.
+  es: |-
+    Cuando es activada una Carta Mágica/de Trampa o un efecto de monstruo del adversario que selecciona una o más cartas que tú controlas, mientras controles un monstruo "Derrota Almas": niega la activación y, si lo haces, destruye esa carta, y después puedes infligir daño a tu adversario igual al ATK de 1 monstruo "Derrota Almas" que tú controles. Sólo puedes activar 1 "Derrota Almas César de la Calamidad" por turno.
+  fr: |-
+    Lorsqu'une Carte Magie/Piège ou effet de monstre de l'adversaire qui cible une ou plusieurs cartes que vous contrôlez est activé, tant que vous contrôlez un monstre "Âme du Vainqueur" : annulez l'activation, et si vous le faites, détruisez la carte, puis vous pouvez infliger des dommages à votre adversaire égaux à l'ATK d'1 monstre "Âme du Vainqueur" que vous contrôlez. Vous ne pouvez activer qu'1 "Âme du Vainqueur Calamité César" par tour.
+  it: |-
+    Quando viene attivata una Carta Magia/Trappola, o l'effetto di un mostro dell'avversario, che sceglie come bersaglio una o più carte che controlli, mentre controlli un mostro "Sgomina Anima": annulla l'attivazione e, se lo fai, distruggi quella carta, poi puoi infliggere al tuo avversario danno pari all'ATK di 1 mostro "Sgomina Anima" che controlli. Puoi attivare solo 1 "Sgomina Anima Calamità Cesare" per turno.
+  pt: |-
+    Quando um Card de Magia/Armadilha ou efeito de monstro do oponente for ativado que escolha como alvo um ou mais cards que você controla, enquanto você controlar um monstro "Alma Aniquiladora": negue a ativação e, se isso acontecer, destrua esse card e, depois, você pode causar dano ao seu oponente igual ao ATK de 1 monstro "Alma Aniquiladora" que você controla. Você só pode ativar 1 "Alma Aniquiladora César da Calamidade" por turno.
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：自分フィールドに「ＶＳ」モンスターが存在し、自分フィールドのカードを対象とするモンスターの効果・魔法・罠カードを相手が発動した時に発動できる。その発動を無効にし破壊する。その後、自分フィールドの「ＶＳ」モンスター１体を選んでその攻撃力分のダメージを相手に与える事ができる。
   ko:
