--- a/data/cards/89016236.yaml
+++ b/data/cards/89016236.yaml
@@ -2,11 +2,11 @@ konami_id: 18741
 password: 89016236
 name:
   en: Poeltis de Nouvelles
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Poeltis der Nouvelles
+  es: Sofritotis de Nouvelles
+  fr: Poêltis de Nouvelles
+  it: Poeltis de Nouvelles
+  pt: Poeltis de Nouvelles
   ja: ポワレティス・ド・ヌーベルズ
   ja_romaji: Powaretisu Do Nūberuzu
   ko:
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     You can Ritual Summon this card with a "Recipe" card. If this card is Special Summoned: You can draw 1 card. When a card or effect is activated that targets a monster on the field, or when a monster is targeted for an attack (Quick Effect): You can Tribute 1 "Nouvelles" monster you control and 1 Attack Position monster on either field, and if you do, Special Summon 1 Level 4 or 5 "Nouvelles" Ritual Monster from your hand or Deck. You can only use each effect of "Poeltis de Nouvelles" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Du kannst diese Karte mit einer „Rezept“-Karte als Ritualbeschwörung beschwören. Falls diese Karte als Spezialbeschwörung beschworen wird: Du kannst 1 Karte ziehen. Wenn eine Karte oder ein Effekt aktiviert wird, die oder der ein Monster auf dem Spielfeld als Ziel wählt, oder wenn ein Monster als Ziel für einen Angriff gewählt wird (Schnelleffekt): Du kannst 1 „Nouvelles“-Monster, das du kontrollierst, und 1 Monster in Angriffsposition auf einer beliebigen Spielfeldseite als Tribut anbieten und falls du dies tust, beschwöre 1 „Nouvelles“-Ritualmonster der Stufe 4 oder 5 als Spezialbeschwörung von deiner Hand oder deinem Deck. Du kannst jeden Effekt von „Poeltis der Nouvelles“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Puedes Invocar esta carta por Ritual con una carta "Receta". Si esta carta es Invocada de Modo Especial: puedes robar 1 carta. Cuando es activada una carta o efecto que selecciona un monstruo en el Campo, o cuando un monstruo es seleccionado para un ataque (Efecto Rápido): puedes Sacrificar 1 monstruo "Nouvelles" que tú controles y 1 monstruo en Posición de Ataque en cualquier Campo y, si lo haces, Invoca de Modo Especial, desde tu mano o Deck, 1 Monstruo de Ritual "Nouvelles" de Nivel 4 o 5. Sólo puedes usar cada efecto de "Sofritotis de Nouvelles" una vez por turno.
+  fr: |-
+    Vous pouvez Invoquer Rituellement cette carte avec une carte "Recette". Si cette carte est Invoquée Spécialement : vous pouvez piocher 1 carte. Lorsqu'une carte ou un effet qui cible un monstre sur le Terrain est activé, ou lorsqu'un monstre est ciblé par une attaque (Effet Rapide) : vous pouvez Sacrifier 1 monstre "Nouvelles" que vous contrôlez et 1 monstre en Position d'Attaque sur l'un des Terrains, et si vous le faites, Invoquez Spécialement 1 Monstre Rituel "Nouvelles" de Niveau 4 ou 5 depuis votre main ou Deck. Vous ne pouvez utiliser chaque effet de "Poêltis de Nouvelles" qu'une fois par tour.
+  it: |-
+    Puoi Evocare tramite Rituale questa carta con una carta "Ricetta". Se questa carta viene Evocata Specialmente: puoi pescare 1 carta. Quando viene attivata una carta o un effetto che sceglie come bersaglio un mostro sul Terreno, o quando un mostro viene scelto come bersaglio per un attacco (Effetto Rapido): puoi offrire come Tributo 1 mostro "Nouvelles" che controlli e 1 mostro in Posizione di Attacco su qualsiasi Terreno e, se lo fai, Evoca Specialmente 1 Mostro Rituale "Nouvelles" di Livello 4 o 5 dalla tua mano o Deck. Puoi utilizzare ogni effetto di "Poeltis de Nouvelles" una sola volta per turno.
+  pt: |-
+    Você pode Invocar este card por Invocação-Ritual com um card "Receita". Se este card for Invocado por Invocação-Especial: você pode comprar 1 card. Quando um card ou efeito for ativado que escolha um monstro no campo como alvo, ou quando um monstro for alvo de um ataque (Efeito Rápido): você pode oferecer como Tributo 1 monstro "Nouvelles" que você controla e 1 monstro em Posição de Ataque em qualquer campo e, se isso acontecer, Invoque por Invocação-Especial 1 Monstro de Ritual "Nouvelles" de Nível 4 ou 5 da sua mão ou do Deck. Você só pode usar cada efeito de "Poeltis de Nouvelles" uma vez por turno.
   ja: |-
     「レシピ」カードにより降臨。このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが特殊召喚に成功した場合に発動できる。自分はデッキから１枚ドローする。②：フィールドのモンスターが攻撃・効果の対象になった時に発動できる。自分フィールドの「ヌーベルズ」モンスター１体と自分・相手フィールドの攻撃表示モンスター１体をリリースし、手札・デッキからレベル４・５の「ヌーベルズ」儀式モンスター１体を特殊召喚する。
   ko:
