--- a/data/cards/89943723.yaml
+++ b/data/cards/89943723.yaml
@@ -50,6 +50,8 @@ images:
 - index: 2
   image: ElementalHERONeos-DUPO-EN-UR-LE.png
   illustration: ElementalHERONeos-OW-2.png
+- index: 3
+  image: ElementalHERONeos-CCC1-JP-NPR.png
 sets:
   en:
   - set_number: POTD-EN001
