--- a/data/cards/91951471.yaml
+++ b/data/cards/91951471.yaml
@@ -2,11 +2,11 @@ konami_id: 18735
 password: 91951471
 name:
   en: Vanquish Soul Dust Devil
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Bezwingerseelen-Staubwirbel
+  es: Derrota Almas Demonio del Polvo
+  fr: Âme du Vainqueur Tourbillon de Poussière
+  it: Sgomina Anima Diavolo di Sabbia
+  pt: Redemoinho da Alma Aniquiladora
   ja: <ruby>ＶＳ<rt>ヴァンキッシュ・ソウル</rt></ruby> <ruby>螺旋流辻風<rt>ダストデビル</rt></ruby>
   ja_romaji: Vankisshu Souru Dasuto Debiru
   ko:
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     Target 1 "Vanquish Soul" monster you control; change its battle position, then you can change face-up monsters your opponent controls to face-down Defense Position, up to the number of "Vanquish Soul" monsters you control with different names. You can only activate 1 "Vanquish Soul Dust Devil" per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Wähle 1 „Bezwingerseele“-Monster, das du kontrollierst; ändere seine Kampfposition, dann kannst du offene Monster, die dein Gegner kontrolliert, bis zur Anzahl der „Bezwingerseele“-Monster mit unterschiedlichen Namen, die du kontrollierst, in die verdeckte Verteidigungsposition ändern. Du kannst nur 1 „Bezwingerseelen-Staubwirbel“ pro Spielzug aktivieren.
+  es: |-
+    Selecciona 1 monstruo "Derrota Almas" que controles; cambia su posición de batalla, y después puedes cambiar monstruos boca arriba que controle tu adversario a Posición de Defensa boca abajo, hasta el número de monstruos "Derrota Almas" con nombres diferentes que tú controles. Sólo puedes activar 1 "Derrota Almas Demonio del Polvo" por turno.
+  fr: |-
+    Ciblez 1 monstre "Âme du Vainqueur" que vous contrôlez ; changez sa position de combat, puis vous pouvez changer un nombre de monstres face recto contrôlés par votre adversaire en Position de Défense face verso, inférieur ou égal au nombre de monstres "Âme du Vainqueur" que vous contrôlez de noms différents. Vous ne pouvez activer qu'1 "Âme du Vainqueur Tourbillon de Poussière" par tour.
+  it: |-
+    Scegli come bersaglio 1 mostro "Sgomina Anima" che controlli; cambia la sua posizione, poi puoi mettere coperti in Posizione di Difesa mostri scoperti controllati dal tuo avversario, fino al numero di mostri "Sgomina Anima" che controlli con nomi diversi. Puoi attivare solo 1 "Sgomina Anima Diavolo di Sabbia" per turno.
+  pt: |-
+    Escolha 1 monstro "Alma Aniquiladora" que você controla; mude sua posição de batalha e, depois, você pode colocar monstros com a face para cima que seu oponente controla com a face para baixo em Posição de Defesa, até o número de monstros "Alma Aniquiladora" que você controla com nomes diferentes. Você só pode ativar 1 "Redemoinho da Alma Aniquiladora" por turno.
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：自分フィールドの「ＶＳ」モンスター１体を対象として発動できる。そのモンスターの表示形式を変更する。その後、自分フィールドの「ＶＳ」モンスターの種類の数まで、相手フィールドの表側表示モンスターを選んで裏側守備表示にできる。
   ko:
