--- a/data/rush/15150.yaml
+++ b/data/rush/15150.yaml
@@ -70,6 +70,8 @@ images:
 - index: 5
   image: SevensRoadMagician-RDORP1-JP-ORR.png
   illustration: SevensRoadMagician-G002-JP-VG-artwork-3.png
+- index: 6
+  image: SevensRoadMagician-RDCCC1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/ST01-JP001
