--- a/data/rush/15193.yaml
+++ b/data/rush/15193.yaml
@@ -59,6 +59,12 @@ series:
 images:
 - index: 1
   image: PrimaGuitarnatheShiningSuperstar-RDMRP1-JP-C.png
+  illustration: PrimaGuitarnatheShiningSuperstar-DBR-JP-VG-artwork.png
+- index: '1.1'
+  image: PrimaGuitarnatheShiningSuperstar-RDKP01-KR-UR.png
+  illustration: PrimaGuitarnatheShiningSuperstar-DBR-EN-VG-artwork.png
+- index: 2
+  image: PrimaGuitarnatheShiningSuperstar-RDCCC1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/KP01-JP028
