--- a/data/rush/16904.yaml
+++ b/data/rush/16904.yaml
@@ -1,6 +1,6 @@
 konami_id: 16904
 name:
-  en: Mr. Alche
+  en: Mr. Alchemy
   de:
   es:
   fr:
@@ -48,7 +48,7 @@ atk: 100
 def: 500
 images:
 - index: 1
-  image: MrAlche-RDEXT1-JP-C.png
+  image: MrAlchemy-RDEXT1-JP-C.png
 sets:
   ja:
   - set_number: RD/EXT1-JP020
