--- a/data/rush/yugipedia937017.yaml
+++ b/data/rush/yugipedia937017.yaml
@@ -44,7 +44,7 @@ atk: 2900
 def: 2900
 materials:
   en: |-
-    "Ensembullfighter the Music Fiend" + "Contacton the Music Princess"
+    "Ensembullfighter the Music Fiend" + "Boton the Music Princess"
   de:
   es:
   fr:
