--- a/data/rush/yugipedia937021.yaml
+++ b/data/rush/yugipedia937021.yaml
@@ -1,6 +1,6 @@
 konami_id:
 name:
-  en: Contacton the Music Princess
+  en: Boton the Music Princess
   de:
   es:
   fr:
@@ -34,7 +34,7 @@ series:
 - Music Princess
 images:
 - index: 1
-  image: ContactontheMusicPrincess-RDTB01-JP-OP.png
+  image: BotontheMusicPrincess-RDTB01-JP-OP.png
 sets:
   ja:
   - set_number: RD/TB01-JP031
